New macro for identity morphisms

--- a/adequate.tex
+++ b/adequate.tex
@@ -2869,7 +2869,7 @@ adjoint functors
 $Rf_* : D_{\textit{Adeq}}(\mathcal{O}) \to D_\QCoh(S)$
 and
 $Lf^* : D_\QCoh(S) \to D_{\textit{Adeq}}(\mathcal{O})$.
-Moreover $Rf_* Lf^* \cong \text{id}_{D_\QCoh(S)}$.
+Moreover $Rf_* Lf^* \cong \id_{D_\QCoh(S)}$.
 
 \medskip\noindent
 We sketch the proof. By
@@ -2928,7 +2928,7 @@ $f^*\mathcal{F}^\bullet$ are adequate.
 
 \medskip\noindent
 The final assertion
-$Rf_* Lf^* \cong \text{id}_{D_\QCoh(S)}$
+$Rf_* Lf^* \cong \id_{D_\QCoh(S)}$
 follows from the explicit description of the functors above.
 (In plain English: if $\mathcal{F}$ is quasi-coherent and $p > 0$, then
 $L_pf^*\mathcal{F}$ is a parasitic adequate module.)
