--- a/algebraic.tex
+++ b/algebraic.tex
@@ -1435,7 +1435,7 @@ $x : (\Sch/U)_{fppf} \to \mathcal{X}$ be a $1$-morphism which
 is surjective and smooth (resp.\ \'etale). Considering the diagram
 $$
 \xymatrix{
-(\Sch/U)_{fppf} \ar[r]_{\text{id}} \ar[d]_x &
+(\Sch/U)_{fppf} \ar[r]_{\id} \ar[d]_x &
 (\Sch/U)_{fppf} \ar[d]^{f \circ x} \\
 \mathcal{X} \ar[r]^f &
 \mathcal{Y}
@@ -2153,10 +2153,10 @@ by definition of $\mathcal{R}$ as the $2$-fibre product.
 Namely, on an object $(a, b, \alpha)$ of $\mathcal{R}$ over $T$ it is
 the map $\alpha^{-1} : b \to a$. We claim that
 $$
-\tau \circ \text{id}_{\text{pr}_{02}} =
-(\tau \star \text{id}_{\text{pr}_0})
+\tau \circ \id_{\text{pr}_{02}} =
+(\tau \star \id_{\text{pr}_0})
 \circ
-(\tau \star \text{id}_{\text{pr}_1}).
+(\tau \star \id_{\text{pr}_1}).
 $$
 This identity says that given an object
 $((a, b, \alpha), (b, c, \beta))$ of
