--- a/artin.tex
+++ b/artin.tex
@@ -727,7 +727,7 @@ We interrupt the flow of the argument to show that the lemma for
 infinitesimal automorphisms follows from the lemma for tangent spaces.
 Namely, let
 $\mathcal{R} = \mathcal{U} \times_\mathcal{X} \mathcal{U}$.
-Let $r_0$ be the $l$-valued point $(u_0, u_0, \text{id}_{x_0})$ of
+Let $r_0$ be the $l$-valued point $(u_0, u_0, \id_{x_0})$ of
 $\mathcal{R}$. Combining
 Lemma \ref{lemma-fibre-product-deformation-categories} and
 Formal Deformation Theory, Lemma
@@ -2868,7 +2868,7 @@ is clearly preserved by shrinking $U$
 topological space).
 Since $U \to U'$ is a first order thickening of affine schemes,
 we can choose a morphism $i' : U' \to Z$
-such that $p' \circ i' = \text{id}_{U'}$ and
+such that $p' \circ i' = \id_{U'}$ and
 whose restriction to $U$ is $i$
 (More on Morphisms of Spaces, Lemma
 \ref{spaces-more-morphisms-lemma-smooth-formally-smooth}).
@@ -2967,7 +2967,7 @@ $$
 \text{Aut}_{\mathcal{X}_{\Spec(A)}}(x)\right)
 $$
 Note that an element of $\text{Inf}(x'/x)$ is the same thing as a lift
-of $\text{id}_x$ over $\Spec(A')$ for (the category fibred in sets associated
+of $\id_x$ over $\Spec(A')$ for (the category fibred in sets associated
 to) $\mathit{Aut}_\mathcal{X}(x')$. Compare with
 Formal Deformation Theory, Definition
 \ref{formal-defos-definition-relative-infinitesimal-auts} and
@@ -3061,11 +3061,11 @@ We define $\text{Inf}_x$ as the functor
 $$
 \text{Mod}_A \longrightarrow \textit{Sets},\quad
 M \longrightarrow
-\text{Inf}(x'_M/x) = \text{Lift}(\text{id}_x, A[M])
+\text{Inf}(x'_M/x) = \text{Lift}(\id_x, A[M])
 $$
 mapping $M$ to the group of infinitesimal automorphisms
 of the trivial deformation $x'_M$ of $x$ to $\Spec(A[M])$
-or equivalently the group of lifts of $\text{id}_x$ in
+or equivalently the group of lifts of $\id_x$ in
 $\mathit{Aut}_\mathcal{X}(x'_M)$.
 We define $T_x$ as the functor
 $$
