--- a/bootstrap.tex
+++ b/bootstrap.tex
@@ -127,7 +127,7 @@ that $\sigma_i = \sigma|_{T_i}$. By assumption
 $F' = h_T \times_{\sigma, G, a} F$ is a sheaf.
 Note that $(\varphi_i, s_i) \in F'(T_i)$ satisfy the
 sheaf condition also, and hence come from some unique
-$(\text{id}_T, s) \in F'(T)$. Clearly $s$ is the section of
+$(\id_T, s) \in F'(T)$. Clearly $s$ is the section of
 $F$ we are looking for.
 \end{proof}
 
