--- a/brauer.tex
+++ b/brauer.tex
@@ -99,7 +99,7 @@ bicommutant of $M$.
 \begin{proof}
 Let $A' = \text{End}_A(M)$, and let $A'' = \text{End}_{A'}(M)$
 (the bicommutant of $M$). Let $R : A \to A''$ be the natural homomorphism
-$R(a)(m) = ma$. Then $R$ is injective, since $R(1) = \text{id}_M$
+$R(a)(m) = ma$. Then $R$ is injective, since $R(1) = \id_M$
 and $A$ contains no nontrivial two-sided ideal. We claim that $R(M)$
 is a right ideal in $A''$. Namely, $R(m)a'' = R(ma'')$ for $a'' \in A''$
 and $m$ in $M$, because {\it left} multiplication of $M$ by any element $n$
