--- a/chow.tex
+++ b/chow.tex
@@ -403,7 +403,7 @@ for $i = 0, \ldots, n$.
 \end{lemma}
 
 \begin{proof}
-The cases $i = 0, n$ are trivial as $\pi^0 = \text{id}_M$ by convention.
+The cases $i = 0, n$ are trivial as $\pi^0 = \id_M$ by convention.
 Let us think of $M$ as an $R[t]$-module where multiplication by $t$
 is given by $\varphi$. Let us write
 $K_i = \Ker(t^i : M \to M)$ and
@@ -4719,9 +4719,9 @@ For surjectivity see Lemma \ref{lemma-pullback-affine-fibres-surjective}.
 Let $o : X \to L$ be the zero section of $L \to X$, i.e., the morphism
 corresponding to the surjection $\text{Sym}^*(\mathcal{L}) \to \mathcal{O}_X$
 which maps $\mathcal{L}^{\otimes n}$ to zero for all $n > 0$.
-Then $p \circ o = \text{id}_X$ and $o(X)$ is an effective
+Then $p \circ o = \id_X$ and $o(X)$ is an effective
 Cartier divisor on $L$. Hence by Lemma \ref{lemma-relative-effective-cartier}
-we see that $o^* \circ p^* = \text{id}$ and we conclude that $p^*$ is
+we see that $o^* \circ p^* = \id$ and we conclude that $p^*$ is
 injective too.
 \end{proof}
 
@@ -4794,7 +4794,7 @@ A^p(X \to Y) \times A^q(Y \to Z) \to A^{p + q}(X \to Z)
 $$
 which is associative.
 We will be most interested in $A^p(X) = A^p(X \to X)$, which will always mean
-the bivariant cohomology classes for $\text{id}_X$. Namely, that is where
+the bivariant cohomology classes for $\id_X$. Namely, that is where
 chern classes will live.
 
 \begin{definition}
@@ -7465,7 +7465,7 @@ and $\overline{u} \in \kappa^*$ is the image of $u$.
 
 \begin{proof}
 Denote $f_M \in \kappa^*$ the element such that
-$\det\nolimits_\kappa(u_M) = f_M \text{id}_{\det\nolimits_\kappa(M)}$.
+$\det\nolimits_\kappa(u_M) = f_M \id_{\det\nolimits_\kappa(M)}$.
 Suppose that $0 \to K \to L \to M \to 0$ is a short
 exact sequence of finite $R$-modules. Then we see that
 $u_k$, $u_L$, $u_M$ give an isomorphism of short exact sequences.
