--- a/coherent.tex
+++ b/coherent.tex
@@ -4768,7 +4768,7 @@ U \ar[r] \ar[rd] & \pi^{-1}(U) \ar[d] \\
 & U
 }
 $$
-and using that $\text{id}_U : U \to U$ is proper and that
+and using that $\id_U : U \to U$ is proper and that
 $U$ is scheme theoretically dense in $\pi^{-1}(U)$.
 \end{proof}
 
