--- a/cohomology.tex
+++ b/cohomology.tex
@@ -4268,19 +4268,19 @@ $$
 So if $p = 3$ and $\sigma$, $\tau$ are given by
 $$
 \begin{matrix}
-\text{id} & 0 & 1 & 2 & 3 \\
+\id & 0 & 1 & 2 & 3 \\
 \sigma & 3 & 2 & 1 & 0
 \end{matrix}
 \quad \text{and} \quad
 \begin{matrix}
-\text{id} & 0 & 1 & 2 & 3 \\
+\id & 0 & 1 & 2 & 3 \\
 \tau & 3 & 0 & 2 & 1
 \end{matrix}
 $$
 then we have
 $$
 \begin{matrix}
-\text{id} & 0 & 1 & 2 & 3 \\
+\id & 0 & 1 & 2 & 3 \\
 \sigma_0 & 0 & 1 & 2 & 3 \\
 \sigma_1 & 3 & 0 & 1 & 2 \\
 \sigma_2 & 3 & 2 & 0 & 1 \\
@@ -4288,14 +4288,14 @@ $$
 \end{matrix}
 \quad \text{and} \quad
 \begin{matrix}
-\text{id} & 0 & 1 & 2 & 3 \\
+\id & 0 & 1 & 2 & 3 \\
 \tau_0 & 0 & 1 & 2 & 3 \\
 \tau_1 & 3 & 0 & 1 & 2 \\
 \tau_2 & 3 & 0 & 1 & 2 \\
 \tau_3 & 3 & 0 & 2 & 1 \\
 \end{matrix}
 $$
-It is clear that always $\sigma_0 = \text{id}$ and $\sigma_p = \sigma$.
+It is clear that always $\sigma_0 = \id$ and $\sigma_p = \sigma$.
 
 \medskip\noindent
 Having introduced this notation we define for
@@ -4941,7 +4941,7 @@ $$
 \Gamma(X, {\mathcal F}^\bullet) &
 \longrightarrow &
 \text{Tot}(\check{\mathcal{C}}^\bullet({\mathcal U}, {\mathcal F}^\bullet)) \\
-\downarrow \text{id} & & \downarrow \tau \\
+\downarrow \id & & \downarrow \tau \\
 \Gamma(X, {\mathcal F}^\bullet) &
 \longrightarrow &
 \text{Tot}(\check{\mathcal{C}}^\bullet({\mathcal U}, {\mathcal F}^\bullet))
@@ -5840,7 +5840,7 @@ quasi-isomorphism of K-flat complexes of $\mathcal{O}_X$-modules.
 For every complex $\mathcal{F}^\bullet$ of $\mathcal{O}_X$-modules
 the induced map
 $$
-\text{Tot}(\text{id}_{\mathcal{F}^\bullet} \otimes \alpha) :
+\text{Tot}(\id_{\mathcal{F}^\bullet} \otimes \alpha) :
 \text{Tot}(\mathcal{F}^\bullet \otimes_{\mathcal{O}_X} \mathcal{P}^\bullet)
 \longrightarrow
 \text{Tot}(\mathcal{F}^\bullet \otimes_{\mathcal{O}_X} \mathcal{Q}^\bullet)
@@ -6330,7 +6330,7 @@ Lf^*Rf_*K \otimes_{\mathcal{O}_X}^\mathbf{L} Lf^*Rf_*L$
 with the map
 $Lf^*Rf_*K \otimes_{\mathcal{O}_X}^\mathbf{L} Lf^*Rf_*L
 \to K \otimes_{\mathcal{O}_X}^\mathbf{L} L$
-coming from the counit $Lf^* \circ Rf_* \to \text{id}$.
+coming from the counit $Lf^* \circ Rf_* \to \id$.
 \end{remark}
 
 \begin{lemma}
@@ -8243,7 +8243,7 @@ R\SheafHom(K, L) \otimes^\mathbf{L} K \longrightarrow L.
 $$
 For this we take the arrow corresponding to
 $$
-\text{id} :
+\id :
 R\SheafHom(K, L)
 \longrightarrow
 R\SheafHom(K, L)
@@ -8282,7 +8282,7 @@ Lh^*R\SheafHom(K, L) \\
 R\SheafHom(Lh^*K, Lh^*L)
 \end{align*}
 where the first arrow uses the adjunction mapping
-$Lf^*Rf_* \to \text{id}$ and the second arrow is the canonical map
+$Lf^*Rf_* \to \id$ and the second arrow is the canonical map
 constructed in Remark \ref{remark-prepare-fancy-base-change}.
 \end{remark}
 
