--- a/constructions.tex
+++ b/constructions.tex
@@ -710,7 +710,7 @@ The morphism comes, via the definition of $\underline{\Spec}$
 as the scheme representing the functor $F$, from the canonical map
 $\varphi : f^*f_*\mathcal{O}_X \to \mathcal{O}_X$ (which by adjointness of
 push and pull corresponds to
-$\text{id} : f_*\mathcal{O}_X \to f_*\mathcal{O}_X$).
+$\id : f_*\mathcal{O}_X \to f_*\mathcal{O}_X$).
 The statement on the restriction to $f^{-1}(U)$
 follows from the description of the relative spectrum over
 affines, see Lemma \ref{lemma-spec-affine}.
@@ -2424,7 +2424,7 @@ $$
 \Gamma_*(Y, \varphi^*\mathcal{O}_{U_d}(d)) \ar[l]^-\alpha &
 \Gamma_*(U_d, \mathcal{O}_{U_d}(d)) \ar[l]^-{\varphi^*} \\
 S^{(d)} \ar[u]^\psi & &
-S^{(d)} \ar[u]^{\psi^d} \ar[ul]^{\psi^d_\varphi} \ar[ll]_{\text{id}}
+S^{(d)} \ar[u]^{\psi^d} \ar[ul]^{\psi^d_\varphi} \ar[ll]_{\id}
 }
 $$
 commutes. Moreover, the pair $(\varphi, \alpha)$ is unique.
