--- a/cotangent.tex
+++ b/cotangent.tex
@@ -148,7 +148,7 @@ $$
 \textit{Alg}_A \ar[r] & \textit{Sets} \ar@<1ex>[l]
 }
 $$
-commutes. It follows that $X_\bullet(\text{id}_B : B \to B)$
+commutes. It follows that $X_\bullet(\id_B : B \to B)$
 is equal to the standard resolution of $B$ over $A$.
 \end{remark}
 
@@ -1041,7 +1041,7 @@ we conclude what we want because the two compositions
 $$
 \xymatrix{
 P_\bullet \ar[r] &
-P_{A'/A', \bullet} \ar@<1ex>[rr]^{\text{id}}
+P_{A'/A', \bullet} \ar@<1ex>[rr]^{\id}
 \ar@<-1ex>[rr]_{c \circ \epsilon_{A'/A'}} & &
 P_{A'/A', \bullet} \ar[r] &
 P'_\bullet
@@ -1286,7 +1286,7 @@ by Simplicial, Lemma \ref{simplicial-lemma-filtered-colimit-trivial-kan}.
 \begin{lemma}
 \label{lemma-triangle-compute-lower-shriek}
 With notation as in (\ref{equation-three-maps}) we have
-$Lg_{i, !} \circ g_i^{-1} = \text{id}$ for $i = 1, 2, 3$
+$Lg_{i, !} \circ g_i^{-1} = \id$ for $i = 1, 2, 3$
 and hence also $L\pi_! \circ g_i^{-1} = L\pi_{i, !}$ for
 $i = 1, 2, 3$.
 \end{lemma}
