--- a/discriminant.tex
+++ b/discriminant.tex
@@ -486,7 +486,7 @@ $$
 \mathcal{O}_X
 $$
 See Exercises, Exercise \ref{exercises-exercise-trace-det}. This map has
-the property that $\text{Trace}(\text{id})$ is the locally constant function
+the property that $\text{Trace}(\id)$ is the locally constant function
 on $\mathcal{O}_X$ corresponding to the rank of $\mathcal{F}$.
 
 \medskip\noindent
