--- a/divisors.tex
+++ b/divisors.tex
@@ -303,7 +303,7 @@ $$
 \mathcal{F}_s = i_s^*\mathcal{F}
 $$
 Of course, this notation clashes with the already existing notation
-for the stalk of $\mathcal{F}$ at a point $x \in X$ if $f = \text{id}_X$.
+for the stalk of $\mathcal{F}$ at a point $x \in X$ if $f = \id_X$.
 However, the notation is often convenient, as in the formulation of
 the following lemma.
 
