--- a/examples.tex
+++ b/examples.tex
@@ -1076,7 +1076,7 @@ can show this arrow is surjective then it will follow that $\hat A$
 is nonreduced. Actually the map is an isomorphism but we omit the
 verification of this. The subring $\mathbf{C}[x]_{(x)} \subset A$
 gives rise to a map $i : \mathbf{C}[[x]] \to \hat A$ on completions such
-that $i \circ \psi = \text{id}$ and such that $D \circ i = 0$
+that $i \circ \psi = \id$ and such that $D \circ i = 0$
 (as $D(x) = 0$ by construction). Consider the elements $x^nf_n \in A$.
 We have
 $$
@@ -1423,7 +1423,7 @@ such that
 $$
 \xymatrix{
 C_1
-\ar@<1ex>[rr]^{\text{id}} \ar@<-1ex>[rr]_{\varphi}
+\ar@<1ex>[rr]^{\id} \ar@<-1ex>[rr]_{\varphi}
 & &
 Y \ar[r]^\pi & X
 }
@@ -3041,7 +3041,7 @@ $$
 which maps the summands $X \times_S X$ and $S$ into $S$ and
 maps the summands $X$ into $X$ by the identity morphism.
 This defines a group law. To see this we have to show that
-$m \circ (m \times \text{id}_G) = m \circ (\text{id}_G \times m)$
+$m \circ (m \times \id_G) = m \circ (\text{id}_G \times m)$
 as maps $G \times_S G \times_S G \to G$. Decomposing
 $G \times_S G \times_S G$ into components as above, we see that
 we need to verify this for the restriction to each of the $8$-pieces.
@@ -3051,7 +3051,7 @@ to $S$, $X$, $S$, $X$ respectively. Having said this, the fact that
 $X \to S$ is a monomorphism implies that $X \times_S X \cong X$
 and $X \times_S X \times_S X \cong X$ and that there is in each case
 exactly one $S$-morphism $S \to S$ or $X \to X$. Thus we see
-that $m \circ (m \times \text{id}_G) = m \circ (\text{id}_G \times m)$.
+that $m \circ (m \times \id_G) = m \circ (\text{id}_G \times m)$.
 Thus taking $X \to S$ to be any
 nonflat monomorphism of schemes (e.g., a closed immersion)
 we get an example of a group scheme
@@ -5425,7 +5425,7 @@ and we have the surjection $M_i \to V_i$. Some details omitted.
 Proof of the claim. First, note that there exists at least one
 system, namely
 $$
-\Phi_0 = (K, J_i = (0), (V_i) \xrightarrow{\text{id}} (V_i))
+\Phi_0 = (K, J_i = (0), (V_i) \xrightarrow{\id} (V_i))
 $$
 Given a system $\Phi$ we will prove there exists a morphism of systems
 $\Phi \to \Phi'$ (morphisms of systems defined in the obvious manner)
