--- a/exercises.tex
+++ b/exercises.tex
@@ -1177,7 +1177,7 @@ is exact.
 Let ${\mathbf C}$ be the complex number field. Let $V$ be a vector
 space over ${\mathbf C}$. The spectrum of a linear operator
 $T : V \to V$ is the set of complex numbers $\lambda \in {\mathbf C}$
-such that the operator $T - \lambda \text{id}_V$ is not invertible.
+such that the operator $T - \lambda \id_V$ is not invertible.
 \begin{enumerate}
 \item Show that $\mathbf{C}(X)$
 has uncountable dimension over ${\mathbf C}$.
@@ -2602,8 +2602,8 @@ all the stalks are injective.
 
 \noindent
 A morphism $f : X \to Y$ of a category $\mathcal{C}$ is an {\it isomorphism}
-if there exists a morphism $g : Y \to X$ such that $f \circ g = \text{id}_Y$
-and $g \circ f = \text{id}_X$. An isomorphism in the category of sets
+if there exists a morphism $g : Y \to X$ such that $f \circ g = \id_Y$
+and $g \circ f = \id_X$. An isomorphism in the category of sets
 is a bijective map of sets.
 
 \begin{exercise}
@@ -2923,9 +2923,9 @@ S = \Spec(\mathbf{C}[t]).
 $$
 \begin{enumerate}
 \item Show there does not exist a morphism $\sigma : S \to X$
-such that $\pi \circ \sigma = \text{id}_S$.
+such that $\pi \circ \sigma = \id_S$.
 \item Show there does exist a nonempty open $U \subset S$ and
-a morphism $\sigma : U \to X$ such that $\pi \circ \sigma = \text{id}_U$.
+a morphism $\sigma : U \to X$ such that $\pi \circ \sigma = \id_U$.
 \end{enumerate}
 \end{exercise}
 
@@ -2939,7 +2939,7 @@ X = \Spec(\mathbf{C}[x, t]/(x^2 + t))
 S = \Spec(\mathbf{C}[t]).
 $$
 Show there does not exist a nonempty open $U \subset S$ and
-a morphism $\sigma : U \to X$ such that $\pi \circ \sigma = \text{id}_U$.
+a morphism $\sigma : U \to X$ such that $\pi \circ \sigma = \id_U$.
 \end{exercise}
 
 \begin{exercise}
@@ -2953,7 +2953,7 @@ X = \Spec(\mathbf{C}[x, y, t]/(A + Bx^2 + Cy^2))
 S = \Spec(\mathbf{C}[t]).
 $$
 Show there does exist a nonempty open $U \subset S$ and
-a morphism $\sigma : U \to X$ such that $\pi \circ \sigma = \text{id}_U$.
+a morphism $\sigma : U \to X$ such that $\pi \circ \sigma = \id_U$.
 (Hint: Symbolically, write $x = X/Z$, $y = Y/Z$ for some
 $X, Y, Z \in \mathbf{C}[t]$ of degree $\leq d$ for some $d$,
 and work out the condition that this solves the equation.
@@ -2981,7 +2981,7 @@ X = \Spec(\mathbf{C}[x, y, t]
 S = \Spec(\mathbf{C}[t])
 $$
 Show there does not exist a nonempty open $U \subset S$ and
-a morphism $\sigma : U \to X$ such that $\pi \circ \sigma = \text{id}_U$.
+a morphism $\sigma : U \to X$ such that $\pi \circ \sigma = \id_U$.
 \end{exercise}
 
 \begin{exercise}
@@ -3002,7 +3002,7 @@ $$
 \pi : X \longrightarrow S
 $$
 Show there does not exist a nonempty open $U \subset S$ and
-a morphism $\sigma : U \to X$ such that $\pi \circ \sigma = \text{id}_U$.
+a morphism $\sigma : U \to X$ such that $\pi \circ \sigma = \id_U$.
 \end{exercise}
 
 \begin{exercise}
@@ -4050,7 +4050,7 @@ f^\sharp : \mathcal{O}_Y \longrightarrow f_*\mathcal{O}_X
 $$
 has a left inverse, i.e., there is an $\mathcal{O}_Y$-module map
 $\tau : f_*\mathcal{O}_X \to \mathcal{O}_Y$
-with $\tau \circ f^\sharp = \text{id}$.
+with $\tau \circ f^\sharp = \id$.
 Conclude that $H^n(Y, \mathcal{O}_Y) \to H^n(X, \mathcal{O}_X)$
 is injective\footnote{There does exist a finite locally free morphism
 $X \to Y$ between integral schemes of degree $2$ where the map
