--- a/flat.tex
+++ b/flat.tex
@@ -539,7 +539,7 @@ X \ar[dd] & X' \ar[l]^g \ar[d]^\pi \\
 S & S' \ar[l]_e
 }
 $$
-and point $x' \in X'$. We set $Z' = X'$, $i = \text{id}$, and
+and point $x' \in X'$. We set $Z' = X'$, $i = \id$, and
 $\mathcal{G} = g^*\mathcal{F}$ to obtain a solution in this case.
 
 \medskip\noindent
@@ -4373,7 +4373,7 @@ where the first arrow is the inclusion map, the second arrow is multiplication
 by $g$ and the third arrow is the projection map. Because each $x_j \in R$
 we obtain the equality
 $$
-f' + \sum x_j g'_j = \text{id}_{M_1} \in \text{End}_R(M_1)
+f' + \sum x_j g'_j = \id_{M_1} \in \text{End}_R(M_1)
 $$
 By Nakayama's lemma
 (Algebra, Lemma \ref{algebra-lemma-NAK})
@@ -5108,7 +5108,7 @@ we can lift $s' \leadsto s$ to a specialization
 $\xi' \leadsto \xi_0$ in $X$, see
 Morphisms, Lemma \ref{morphisms-lemma-generalizations-lift-flat}.
 The $\xi \leadsto \xi'$ because $\xi$ is the generic point of $X_{s'}$
-hence $\xi \leadsto \xi_0$. This means that $(\text{id}_S, s' \to s, \xi)$
+hence $\xi \leadsto \xi_0$. This means that $(\id_S, s' \to s, \xi)$
 is not an impurity of $\mathcal{O}_X$ above $s$. Since the assumption
 that $f$ is finite type, flat with geometrically integral fibres
 is preserved under base change, we see that there doesn't exist an
@@ -7133,7 +7133,7 @@ Since $B \to B'$ is flat (hence faithfully flat, see
 Algebra, Lemma \ref{algebra-lemma-local-flat-ff}),
 we may replace $A \to B$ with $A^h \to B'$,
 the module $M$ by $M \otimes_B B'$, the module $N$ by $N \otimes_B B'$,
-and $u$ by $u \otimes \text{id}_{B'}$, see
+and $u$ by $u \otimes \id_{B'}$, see
 Algebra, Lemmas \ref{algebra-lemma-descend-properties-modules} and
 \ref{algebra-lemma-flatness-descends-more-general}.
 Thus we may assume that $A$ is a henselian local ring.
@@ -7290,7 +7290,7 @@ Lemma \ref{lemma-invert-universally-injective}.
 \label{lemma-universally-injective-if-flat}
 In (\ref{equation-star}) assume $N$ is $A$-flat, $M$ is a flat $A$-module,
 and $u : N \to M$ is an $A$-module map such that
-$u \otimes \text{id}_{\kappa(\mathfrak p)}$ is injective for all
+$u \otimes \id_{\kappa(\mathfrak p)}$ is injective for all
 $\mathfrak p \in \Spec(A)$. Then $u$ is $A$-universally injective. 
 \end{lemma}
 
@@ -7491,7 +7491,7 @@ bad prime, there exists a maximal one, say $\mathfrak p$.
 In other words, we may assume every $\mathfrak p' \supset \mathfrak p$,
 $\mathfrak p' \not = \mathfrak p$ is good.
 In this case we see that for every $f \in A$, $f \not \in \mathfrak p$
-the map $u \otimes \text{id}_{A/(\mathfrak p + f)}$ is universally
+the map $u \otimes \id_{A/(\mathfrak p + f)}$ is universally
 injective, see Lemma \ref{lemma-universally-injective-if-flat}.
 Thus it suffices to show that $N/\mathfrak p N$ is separated
 for the topology defined by the submodules $f(N/\mathfrak pN)$.
@@ -9227,7 +9227,7 @@ $U \subset S'$ is dense, we see that $X' = S'$. Some details omitted.
 \label{lemma-get-section-after-blowup}
 Let $S$ be a scheme. Let $U \subset W \subset S$ be open subschemes.
 Let $f : X \to W$ be a morphism and let $s : U \to X$ be a
-morphism such that $f \circ s = \text{id}_U$. Assume
+morphism such that $f \circ s = \id_U$. Assume
 \begin{enumerate}
 \item $f$ is proper,
 \item $S$ is quasi-compact and quasi-separated, and
