--- a/formal-spaces.tex
+++ b/formal-spaces.tex
@@ -2803,7 +2803,7 @@ We claim that $Z_\lambda \times_X Y = Y \times_X Z_\lambda$ as subfunctors
 of $Y \times_X Y$. Namely, since $Y \to X$ is \'etale we see that
 $Z_\lambda \times_X Y$ is the scheme theoretic image of the morphism
 $$
-\text{pr}_{13} = \text{pr}_1 \times \text{id}_Y :
+\text{pr}_{13} = \text{pr}_1 \times \id_Y :
 Y \times_X Y_\lambda \times_X Y \longrightarrow Y \times_X Y
 $$
 by Morphisms of Spaces, Lemma
@@ -2811,7 +2811,7 @@ by Morphisms of Spaces, Lemma
 By the same token, $Y \times_X Z_\lambda$ is the scheme theoretic image
 of the morphism
 $$
-\text{pr}_{13} = \text{id}_Y \times \text{pr}_2 : 
+\text{pr}_{13} = \id_Y \times \text{pr}_2 : 
 Y \times_X Y_\lambda \times_X Y \longrightarrow Y \times_X Y
 $$
 The claim follows. Then
