--- a/hypercovering.tex
+++ b/hypercovering.tex
@@ -1386,7 +1386,7 @@ We will use the description of $\Hom(C[k], Y)$ and $\Hom(C[k], Z)$
 given in
 Simplicial, Lemma \ref{simplicial-lemma-morphism-into-product}.
 There is a canonical morphism
-$K \to \Hom(C[k], Y)$ corresponding to $\text{id} : K_k = Y \to Y$.
+$K \to \Hom(C[k], Y)$ corresponding to $\id : K_k = Y \to Y$.
 Consider the morphism $\Hom(C[k], Z) \to \Hom(C[k], Y)$
 which on degree $n$ terms is the morphism
 $$
@@ -1402,10 +1402,10 @@ The morphism $L_k \to K_k$ sits in to a commutative diagram
 $$
 \xymatrix{
 L_k \ar[r] \ar[d] &
-\prod_{\alpha : [k] \to [k]} Z \ar[r]^-{\text{pr}_{\text{id}_{[k]}}} \ar[d] &
+\prod_{\alpha : [k] \to [k]} Z \ar[r]^-{\text{pr}_{\id_{[k]}}} \ar[d] &
 Z \ar[d] \\
 K_k \ar[r] &
-\prod_{\alpha : [k] \to [k]} Y \ar[r]^-{\text{pr}_{\text{id}_{[k]}}} &
+\prod_{\alpha : [k] \to [k]} Y \ar[r]^-{\text{pr}_{\id_{[k]}}} &
 Y
 }
 $$
@@ -1874,7 +1874,7 @@ exists a morphism of hypercoverings $c : K' \to K$
 and a morphism  $g : K' \times \Delta[k] \to L$
 such that
 $g|_{K' \times \partial \Delta[k]} =
-a \circ (c \times \text{id}_{\partial \Delta[k]})$.
+a \circ (c \times \id_{\partial \Delta[k]})$.
 In other words, the category of hypercoverings is in
 a suitable sense contractible.
 \end{remark}
@@ -2673,7 +2673,7 @@ $K(\varphi) : K_m \to K_{n + 1}$ as follows:
 \item for $i \in I_m$ there is a unique surjective map
 $\psi : [m] \to [m_0]$ and a unique $i_0 \in I_{m_0}$ nondegenerate
 such that $\alpha(\psi)(i_0) = i$\footnote{For example, if $i$ is
-nondegenerate, then $m = m_0$ and $\psi = \text{id}_{[m]}$.},
+nondegenerate, then $m = m_0$ and $\psi = \id_{[m]}$.},
 \item we set $\varphi_0 = \psi_0 \circ \varphi : [n + 1] \to [m_0]$
 and we map
 $i \in I_m$ to $(\varphi_0, i_0) \in I_{n + 1}$, in other words,
