--- a/injectives.tex
+++ b/injectives.tex
@@ -321,7 +321,7 @@ R
 $$
 which induces the desired map $\mathbf{M}(M) \to \mathbf{M}(N)$.
 The middle east-south-east arrow maps the summand $\mathfrak a$
-corresponding to $\varphi$ via $\text{id}_{\mathfrak a}$ to the
+corresponding to $\varphi$ via $\id_{\mathfrak a}$ to the
 summand $\mathfrak a$ corresponding to $\psi = \chi \circ \varphi$.
 Similarly for the lower east-south-east arrow. Details omitted.
 \end{proof}
@@ -792,7 +792,7 @@ the property
 \mathcal{G}(X)
 \end{equation}
 where the element $\varphi$ of the left hand side is mapped
-to $\varphi(1 \cdot \text{id}_X)$ in the right hand side. We can use these
+to $\varphi(1 \cdot \id_X)$ in the right hand side. We can use these
 sheaves to characterize injective abelian sheaves.
 
 \begin{lemma}
@@ -1833,12 +1833,12 @@ Lemma \ref{lemma-functorial-homotopies}.
 Denote $\mathbf{N}^\bullet(-)$ the functor constructed in
 Lemma \ref{lemma-functorial-injective}.
 Both of these functors come with injective transformations
-$\text{id} \to \mathbf{M}$ and $\text{id} \to \mathbf{N}$.
+$\id \to \mathbf{M}$ and $\text{id} \to \mathbf{N}$.
 
 \medskip\noindent
 By transfinite induction we define a sequence of functors
 $\mathbf{T}_\alpha(-)$ and corresponding transformations
-$\text{id} \to \mathbf{T}_\alpha$. Namely we set
+$\id \to \mathbf{T}_\alpha$. Namely we set
 $\mathbf{T}_0(M^\bullet) = M^\bullet$. If $\mathbf{T}_\alpha$ is
 given then we set
 $$
@@ -2202,7 +2202,7 @@ I^\bullet \times \prod\nolimits_{p' \leq p} J^{p', \bullet}
 $$
 This complex is isomorphic to the complex
 $I^{p, \bullet} \times \prod_{p' > p} J^{p, \bullet}$
-as $\alpha^{pp} = \text{id}$ and $t^p$ is injective.
+as $\alpha^{pp} = \id$ and $t^p$ is injective.
 Hence $F^pJ^\bullet$ is quasi-isomorphic to $I^{p, \bullet}$ (argue
 as above). We have $j(F^pK^\bullet) \subset F^pJ^\bullet$ because
 of the commutativity of the diagram above. The corresponding
