--- a/intersection.tex
+++ b/intersection.tex
@@ -1721,7 +1721,7 @@ to be precise).
 
 \medskip\noindent
 Part (2) implies (3) because
-$\text{pr}_{1, *} \circ \Delta_* = \text{id}$ by
+$\text{pr}_{1, *} \circ \Delta_* = \id$ by
 Lemma \ref{lemma-compose-pushforward}.
 \end{proof}
 
@@ -2481,7 +2481,7 @@ With notation as above. Let $X, Y$ be closed subvarieties of $\mathbf{P}(V)$
 which intersect properly such that $X \not = \mathbf{P}(V)$. There exists
 a line $\ell \subset \mathbf{P}$ such that
 \begin{enumerate}
-\item $[\text{id}_V] \in \ell$,
+\item $[\id_V] \in \ell$,
 \item $X \subset U_g$ for all $[g] \in \ell$,
 \item $g(X)$ intersects $Y$ properly for all $[g] \in \ell$.
 \end{enumerate}
@@ -2490,7 +2490,7 @@ a line $\ell \subset \mathbf{P}$ such that
 \begin{proof}
 Let $B \subset \mathbf{P}$ be the set of ``bad'' points, i.e., those
 points $[g]$ that violate either (2) or (3). Note that
-$[\text{id}_V] \not \in B$ by assumption. Moreover, $B$ is closed.
+$[\id_V] \not \in B$ by assumption. Moreover, $B$ is closed.
 Hence it suffices to prove that $\dim(B) \leq \dim(\mathbf{P}) - 2$
 (Lemma \ref{lemma-find-lines}).
 
@@ -2676,7 +2676,7 @@ $C' \subset \mathbf{P}^N \times \mathbf{P}^1$ such that
 Write $\mathbf{P}^N = \mathbf{P}(V)$ so $\dim(V) = N + 1$. Let
 $E = \text{End}(V)$. Let $E^\vee = \Hom(E, \mathbf{C})$. Set
 $\mathbf{P} = \mathbf{P}(E^\vee)$ as in Lemma \ref{lemma-make-family}.
-Choose a general line $\ell \subset \mathbf{P}$ passing through $\text{id}_V$.
+Choose a general line $\ell \subset \mathbf{P}$ passing through $\id_V$.
 Set $C' \subset \ell \times \mathbf{P}(V)$ equal to the
 closed subscheme having fibre $r_g(C)$ over $[g] \in \ell$.
 More precisely, $C'$ is the image of
@@ -2687,7 +2687,7 @@ under the morphism (\ref{equation-r-psi}). By Lemma \ref{lemma-make-family}
 this makes sense, i.e., $\ell \times C \subset U(\psi)$. The morphism
 $\ell \times C \to C'$ is finite and $C'_{[g]} = r_g(C)$ set theoretically
 for all $[g] \in \ell$. Parts (1) and (2) are clear with
-$0 = [\text{id}_V] \in \ell$. Part (3) follows from the fact
+$0 = [\id_V] \in \ell$. Part (3) follows from the fact
 that $r_g(C)$ and $X$ intersect properly for all $[g] \in \ell$.
 Part (4) follows from the fact that a general point $\infty = [g] \in \ell$
 is a general point of $\mathbf{P}$ and for such as point
