--- a/limits.tex
+++ b/limits.tex
@@ -2314,7 +2314,7 @@ $\varphi_{j_1, j_2, i_4} : W_{j_1, j_2, i_4} \to W_{j_2, j_1, i_4}$
 whose base change to $S$ gives the identity morphism
 $U_{j_1j_2} = U_{j_2j_1}$ for all $j_1, j_2$.
 For all $i \geq i_4$ denote
-$\varphi_{j_1, j_2, i} = \text{id}_S \times \varphi_{j_1, j_2, i_4}$
+$\varphi_{j_1, j_2, i} = \id_S \times \varphi_{j_1, j_2, i_4}$
 the base change. We claim that for some $i_5 \geq i_4$ the system
 $((U_{j, i_5})_j, (W_{j_1, j_2, i_5})_{j_1, j_2},
 (\varphi_{j_1, j_2, i_5})_{j_1, j_2})$ forms a glueing datum
@@ -2331,7 +2331,7 @@ The first condition follows from Lemma \ref{lemma-descend-opens}
 and the fact that $U_{j_2j_1j_3} = U_{j_1j_2j_3}$.
 The second from part (1) of the lemma proved above and the fact
 that the cocycle condition holds for the maps
-$\text{id} : U_{j_1j_2} \to U_{j_2j_1}$.
+$\id : U_{j_1j_2} \to U_{j_2j_1}$.
 Ok, so now we can use Schemes, Lemma \ref{schemes-lemma-glue-schemes}
 to glue the system
 $((U_{j, i_5})_j, (W_{j_1, j_2, i_5})_{j_1, j_2},
@@ -4485,7 +4485,7 @@ to a diagram of the form (\ref{equation-good-diagram}).
 For example, given $X \to S$ finite type and quasi-separated
 if we choose two different diagrams $X \to V_1 \to S_{i_1}$
 and $X \to V_2 \to S_{i_2}$ as in (\ref{equation-good-diagram}), then
-applying Lemma \ref{lemma-morphism-good-diagram} to $\text{id}_X$
+applying Lemma \ref{lemma-morphism-good-diagram} to $\id_X$
 (in two directions)
 we see that the corresponding limit descriptions of
 $X$ are canonically isomorphic (up to shrinking the
