--- a/models.tex
+++ b/models.tex
@@ -939,7 +939,7 @@ $$
 \mathbf{Z}^{\oplus n} \ar[rr] & &
 \Coker(A) \ar[r] & 0 \\
 0 \ar[r] &
-\mathbf{Z}^{\oplus n} \ar[rr]^{(a_{ij}/w_i)} \ar[u]_{\text{id}} & &
+\mathbf{Z}^{\oplus n} \ar[rr]^{(a_{ij}/w_i)} \ar[u]_{\id} & &
 \mathbf{Z}^{\oplus n} \ar[rr] \ar[u]_{\text{diag}(w_1, \ldots, w_n)} & &
 \Pic(T) \ar[r] \ar[u] & 0
 }
@@ -5730,7 +5730,7 @@ Thus the canonical map of the lemma comes from the commutative
 diagram
 $$
 \xymatrix{
-\mathbf{Z}^{\oplus n} \ar[r] \ar[d]_{\text{id}} &
+\mathbf{Z}^{\oplus n} \ar[r] \ar[d]_{\id} &
 \Pic(X) \ar[r] \ar[d]^{\frac{\deg}{w}} &
 \Pic(C) \ar[r] \ar[d] & 0 \\
 \mathbf{Z}^{\oplus n} \ar[r]^{(a_{ij}/w_i)} &
