--- a/modules.tex
+++ b/modules.tex
@@ -1214,7 +1214,7 @@ $\pi^*$.
 In the situation of Lemma \ref{lemma-construct-quasi-coherent-sheaves}
 we say $\mathcal{F}_M$ is the {\it sheaf associated to the module $M$
 and the ring map $\alpha$}. If $R = \Gamma(X, \mathcal{O}_X)$
-and $\alpha = \text{id}_R$ we simply say $\mathcal{F}_M$ is the
+and $\alpha = \id_R$ we simply say $\mathcal{F}_M$ is the
 {\it sheaf associated to the module $M$}.
 \end{definition}
 
@@ -2157,7 +2157,7 @@ such that both $\mathcal{F}|_U$ and $\mathcal{G}|_U$ are
 isomorphic to $\mathcal{O}_U^{\oplus r}$.
 Pick lifts of the free generators of $\mathcal{G}|_U$
 to obtain a map $\psi : \mathcal{G}|_U \to \mathcal{F}|_U$
-such that $\varphi|_U \circ \psi = \text{id}$.
+such that $\varphi|_U \circ \psi = \id$.
 Hence we conclude that the map
 $\Gamma(U, \mathcal{F}) \to \Gamma(U, \mathcal{G})$
 induced by $\varphi$ is surjective. Since both
@@ -4426,7 +4426,7 @@ $\mathcal{I} = \Ker(\pi)$ is its kernel. Assume $\mathcal{I}$ an ideal
 sheaf with square zero in $\mathcal{A}$. So $\mathcal{I}$
 has a natural structure of an $\mathcal{O}_X$-module.
 A section $s : \mathcal{O}_X \to \mathcal{A}$ of $\pi$
-is a $f^{-1}\mathcal{O}_S$-algebra map such that $\pi \circ s = \text{id}$.
+is a $f^{-1}\mathcal{O}_S$-algebra map such that $\pi \circ s = \id$.
 Given any section $s : \mathcal{O}_X \to \mathcal{A}$
 of $\pi$ and any $S$-derivation $D : \mathcal{O}_X \to \mathcal{I}$
 the map
@@ -4650,7 +4650,7 @@ $\NL(\alpha) = \NL_{\mathcal{B}/\mathcal{A}}$ in $D(\mathcal{B})$.
 \end{lemma}
 
 \begin{proof}
-Observe that $\NL_{\mathcal{B}/\mathcal{A}} = \NL(\text{id}_\mathcal{B})$.
+Observe that $\NL_{\mathcal{B}/\mathcal{A}} = \NL(\id_\mathcal{B})$.
 Thus it suffices to show that given two maps
 $\alpha_i : \mathcal{E}_i \to \mathcal{B}$ as above, there is a
 canonical quasi-isomorphism $\NL(\alpha_1) = \NL(\alpha_2)$ in $D(\mathcal{B})$.
