--- a/moduli-curves.tex
+++ b/moduli-curves.tex
@@ -381,7 +381,7 @@ $$
 on $Y \times_U X$. Given $(f, \varphi) \in \mathit{Isom}_U(Y, X)(T)$
 for some scheme $T$ over $U$ then for every $t \in T$ we have
 \begin{align*}
-\chi(Y_t, (\text{id} \times f)^*\mathcal{M}^{\otimes n})
+\chi(Y_t, (\id \times f)^*\mathcal{M}^{\otimes n})
 & =
 \chi(Y_t,
 \mathcal{N}_t^{\otimes n} \otimes_{\mathcal{O}_{Y_t}}
@@ -720,7 +720,7 @@ X \times_{\Spec(k)} \Spec(k[\epsilon])
 X \times_{\Spec(k)} \Spec(k[\epsilon])
 $$
 over $\Spec(k[\epsilon])$ whose restriction to $\Spec(k)$ is
-$\text{id}_X$. Such automorphisms are
+$\id_X$. Such automorphisms are
 called infinitesimal automorphisms.
 
 \medskip\noindent
