--- a/moduli.tex
+++ b/moduli.tex
@@ -1855,7 +1855,7 @@ on $Y \times_U X$. Given
 $(f, \varphi) \in \mathit{Isom}_{\Polarizedstack}(\upsilon, \chi)(T)$
 for some scheme $T$ over $U$ then for every $t \in T$ we have
 $$
-\chi(Y_t, (\text{id} \times f)^*\mathcal{M}^{\otimes n}) =
+\chi(Y_t, (\id \times f)^*\mathcal{M}^{\otimes n}) =
 \chi(Y_t,
 \mathcal{N}_t^{\otimes n} \otimes_{\mathcal{O}_{Y_t}}
 f_t^*\mathcal{L}_t^{\otimes n}) =
@@ -2036,7 +2036,7 @@ $$
 \mathit{Isom}(E, E') = (H' \times_T H) \times_{c, I \times_T I', \sigma} T
 $$
 where $c(\varphi', \varphi) = (\varphi \circ \varphi', \varphi' \circ \varphi)$
-and $\sigma = (\text{id}, \text{id})$ (compare with the proof of
+and $\sigma = (\id, \text{id})$ (compare with the proof of
 Quot, Proposition \ref{quot-proposition-isom}). Thus
 $\mathit{Isom}(E, E')$ is affine over $T$ as a fibre product of
 schemes affine over $T$. Similarly, $\mathit{Isom}(E, E')$ is
