--- a/more-morphisms.tex
+++ b/more-morphisms.tex
@@ -4490,7 +4490,7 @@ $\mathcal{F}$ is zero in a neighbourhood of $x$
 and the lemma holds. Thus we may assume $\mathcal{F}_x \otimes \kappa(x)$
 is not zero and we see that
 Theorem \ref{theorem-criterion-flatness-fibre}
-applies with $f = \text{id} : X \to X$. We conclude that $\mathcal{F}_x$
+applies with $f = \id : X \to X$. We conclude that $\mathcal{F}_x$
 is flat over $\mathcal{O}_{X, x}$. Hence $\mathcal{F}_x$ is free, see
 Algebra, Lemma \ref{algebra-lemma-finite-flat-local} for example.
 Choose an open neighbourhood $x \in U \subset X$ and sections
@@ -4528,7 +4528,7 @@ implied by freeness of $\mathcal{F}_x$ and implies
 flatness of $\mathcal{F}|_{X_s}$ at $x$ over $X_s$).
 Thus the base change statement follows from
 Lemma \ref{lemma-base-change-criterion-flatness-fibre}
-applied to $\text{id} : X \to X$ over $S$.
+applied to $\id : X \to X$ over $S$.
 \end{proof}
 
 
@@ -14197,7 +14197,7 @@ Lemma \ref{lemma-finite-morphism-relative-pseudo-coherence}.
 The equivalence of (2) and (3) follows from
 Lemma
 \ref{lemma-composition-relative-pseudo-coherent}
-applied to $\text{id} : P \to P$
+applied to $\id : P \to P$
 provided we can show that $\mathcal{O}_P$ is
 pseudo-coherent relative to $S$. This follows from
 More on Algebra, Lemma
@@ -17042,7 +17042,7 @@ $j : U \to \mathbf{P}^n_A$ the immersion we get by composing
 with the open immersion $\mathbf{A}^n_A \to \mathbf{P}^n_A$.
 Let $Z$ be the scheme theoretic closure of
 $$
-(\text{id}_U, j) : U \longrightarrow X \times_A \mathbf{P}^n_A
+(\id_U, j) : U \longrightarrow X \times_A \mathbf{P}^n_A
 $$
 Since the projection $X \times \mathbf{P}^n \to X$ is separated,
 we conclude from Morphisms, Lemma
@@ -17054,7 +17054,7 @@ Let $z \in Z$ be the unique point lying over $x$.
 Let $Y \subset \mathbf{P}^n_A$ be the scheme theoretic
 closure of $j$. Then it is clear that $Z \subset X \times_A Y$
 is the scheme theoretic closure of
-$(\text{id}_U, j) : U \to X \times_A Y$.
+$(\id_U, j) : U \to X \times_A Y$.
 As $X$ is separated, the morphism
 $X \times_A Y \to Y$ is separated as well.
 Hence we see that $Z \to Y$ is an isomorphism over
