--- a/obsolete.tex
+++ b/obsolete.tex
@@ -1599,7 +1599,7 @@ is zero.
 $\text{Lift}(\mathcal{G}, A')$ is principal homogeneous under
 $\Ext^1_{\mathcal{O}_X \otimes A}(L, \mathcal{G} \otimes_A I)$.
 \item Given a lift $\mathcal{G}'$, the set of automorphisms of
-$\mathcal{G}'$ which pull back to $\text{id}_\mathcal{G}$ is canonically
+$\mathcal{G}'$ which pull back to $\id_\mathcal{G}$ is canonically
 isomorphic to
 $\Ext^0_{\mathcal{O}_X \otimes A}(L, \mathcal{G} \otimes_A I)$.
 \end{enumerate}
@@ -1626,7 +1626,7 @@ if and only if a certain class $\xi \in \Ext^2_{X_A}(L,
 $\text{Lift}(\mathcal{F}, A')$ is principal homogeneous under
 $\Ext^1_{X_A}(L, \mathcal{F} \otimes_A I)$.
 \item Given a lift $\mathcal{F}'$, the set of automorphisms of
-$\mathcal{F}'$ which pull back to $\text{id}_\mathcal{F}$ is canonically
+$\mathcal{F}'$ which pull back to $\id_\mathcal{F}$ is canonically
 isomorphic to
 $\Ext^0_{X_A}(L, \mathcal{F} \otimes_A I)$.
 \end{enumerate}
@@ -1805,7 +1805,7 @@ together with the map $L_{U/U'} \to \mathcal{I}[1]$ determine a
 map $e_{U'} : L_{U/B} \to \mathcal{I}[1]$. Combined with the map
 $e_\mathcal{F}$ of the previous remark we obtain
 $$
-(\text{id}_\mathcal{F} \otimes Lq^*e_{U'}) \cup e_\mathcal{F} :
+(\id_\mathcal{F} \otimes Lq^*e_{U'}) \cup e_\mathcal{F} :
 E(\mathcal{F})
 \longrightarrow
 \mathcal{F} \otimes_{\mathcal{O}_{X \times_B U}} q^*\mathcal{I}[2]
