--- a/perfect.tex
+++ b/perfect.tex
@@ -2529,7 +2529,7 @@ and such that $\alpha|_U$ is the map
 $$
 \left(
 \begin{matrix}
-\text{id}_{\mathcal{F}[r]} & 0 \\
+\id_{\mathcal{F}[r]} & 0 \\
 0 & 0
 \end{matrix}
 \right)
@@ -2638,7 +2638,7 @@ $$
 which is the identity on all summands except for $F$ where it is zero.
 By Lemma \ref{lemma-lift-map} we also have
 $C' = C_s \otimes^\mathbf{L} I$ for some perfect complex
-$I$ on $X$. Hence the nullity of $g_j^2\text{id}_{C_s}$ implies the
+$I$ on $X$. Hence the nullity of $g_j^2\id_{C_s}$ implies the
 same thing for $C'$. Thus $C'$ is supported on $T$ as well.
 Then $\text{Cone}(\gamma)$ is a solution.
 \end{proof}
