--- a/pic.tex
+++ b/pic.tex
@@ -1044,10 +1044,10 @@ Let us finish the proof of the lemma admitting the claim.
 Namely, $D$ defines a morphism $m : T \to H$ such that $D$ is the pullback of
 $D_{univ}$. Then
 $$
-(m \times \text{id}_X)^*\mathcal{O}(D_{univ}) \cong
+(m \times \id_X)^*\mathcal{O}(D_{univ}) \cong
 \mathcal{O}_{T \times X}(D)
 $$
-Hence $(m \times \text{id}_X)^*\mathcal{L}_H$ and $\mathcal{O}(D)$
+Hence $(m \times \id_X)^*\mathcal{L}_H$ and $\mathcal{O}(D)$
 differ by the pullback of an invertible sheaf on $H$. This in particular
 shows that $m : T \to H$ factors through the open $W \subset H$ above.
 Moreover, it follows that these invertible modules define, after adjusting
@@ -1357,7 +1357,7 @@ Assume $k'/k$ is finite Galois with Galois group $G = \text{Gal}(k'/k)$.
 Let $\mathcal{L}$ be an element of $\Pic(X_{k'})$ fixed by $G$.
 We will use Galois descent (Descent, Lemma \ref{descent-lemma-galois-descent})
 to prove that $\mathcal{L}$ is the pullback of an invertible sheaf on $X$.
-Recall that $f_\sigma = \text{id}_X \times \Spec(\sigma) : X_{k'} \to X_{k'}$
+Recall that $f_\sigma = \id_X \times \Spec(\sigma) : X_{k'} \to X_{k'}$
 and that $\sigma$ acts on $\Pic(X_{k'})$ by pulling back by $f_\sigma$.
 Hence for each $\sigma \in G$ we can choose an isomorphism
 $\varphi_\sigma : \mathcal{L} \to f_\sigma^*\mathcal{L}$
