--- a/preamble.tex
+++ b/preamble.tex
@@ -199,6 +199,7 @@
 \def\Im{\mathop{\mathrm{Im}}}
 \def\Coker{\mathop{\mathrm{Coker}}}
 \def\Coim{\mathop{\mathrm{Coim}}}
+\def\id{\mathop{\mathrm{id}}\nolimits}
 
 %
 % Macros for linear algebraic groups
