--- a/properties.tex
+++ b/properties.tex
@@ -4669,7 +4669,7 @@ f^*\widetilde{M} \otimes_{\mathcal{O}_X} f^*\mathcal{O}_Y(n)
 f^*\widetilde{M(n)}
 \ar[d]^{\theta_{\mathcal{F} \otimes \mathcal{L}^{\otimes n}}}
 \\
-\mathcal{F} \otimes \mathcal{L}^{\otimes n} \ar[r]^{\text{id}} &
+\mathcal{F} \otimes \mathcal{L}^{\otimes n} \ar[r]^{\id} &
 \mathcal{F} \otimes \mathcal{L}^{\otimes n}
 }
 $$
