--- a/quot.tex
+++ b/quot.tex
@@ -846,7 +846,7 @@ c : H' \times_B H \longrightarrow I \times_B I',\quad
 $$
 of algebraic spaces over $B$. Since $I \times_B I' \to B$ is separated,
 the section $\sigma : B \to I \times_B I'$ corresponding to
-$(\text{id}_\mathcal{F}, \text{id}_\mathcal{G})$
+$(\id_\mathcal{F}, \text{id}_\mathcal{G})$
 is a closed immersion
 (Morphisms of Spaces, Lemma \ref{spaces-morphisms-lemma-section-immersion}).
 Moreover, $\sigma$ is of finite presentation
@@ -2960,7 +2960,7 @@ See Algebraic Stacks, Lemma
 \ref{algebraic-lemma-criterion-map-representable-spaces-fibred-in-groupoids}.
 We know this functor is representable by an affine scheme $U$ of finite
 presentation over $T$ by Proposition \ref{proposition-isom}
-(applied to $\text{id} : T \to T$ and $\mathcal{O}_T$ and
+(applied to $\id : T \to T$ and $\mathcal{O}_T$ and
 $\sigma^*\mathcal{L}$). Working Zariski locally on $T$ we may
 assume that $\sigma_T^*\mathcal{L}$ is isomorphic to $\mathcal{O}_T$
 and then we see that our functor is representable by
@@ -3153,7 +3153,7 @@ which maps a morphism $f : Z_T \to X_T$ to its graph.
 \begin{proof}
 Given a scheme $T$ over $B$ and a morphism $f_T : Z_T \to X_T$
 over $T$, the graph of $f$ is the morphism
-$\Gamma_f = (\text{id}, f) : Z_T \to Z_T \times_T X_T = (Z \times_B X)_T$.
+$\Gamma_f = (\id, f) : Z_T \to Z_T \times_T X_T = (Z \times_B X)_T$.
 Recall that being separated, flat, proper, or finite presentation
 are properties of morphisms of algebraic spaces which are stable
 under base change (Morphisms of Spaces, Lemmas
@@ -3333,7 +3333,7 @@ is an algebraic space. An elementary argument shows that
 $\mathit{Isom}_S(X, Y)$ sits in a fibre product
 $$
 \xymatrix{
-\mathit{Isom}_S(X, Y) \ar[r] \ar[d] & S \ar[d]_{(\text{id}, \text{id})} \\
+\mathit{Isom}_S(X, Y) \ar[r] \ar[d] & S \ar[d]_{(\id, \text{id})} \\
 \mathit{Mor}_S(X, Y) \times \mathit{Mor}_S(Y, X) \ar[r] &
 \mathit{Mor}_S(X, X) \times \mathit{Mor}_S(Y, Y)
 }
@@ -3895,7 +3895,7 @@ are ample invertible sheaves on $X/S$ so that
 $(X \to S, \mathcal{L})$ and $(X \to S, \mathcal{N})$
 are two objects of $\Polarizedstack$ over the object $(X \to S)$.
 To check descent for morphisms, we assume we have morphisms
-$(\text{id}, \text{id}, \varphi_i)$ from
+$(\id, \text{id}, \varphi_i)$ from
 $(X_i \to S_i, \mathcal{L}|_{X_i})$ to
 $(X_i \to S_i, \mathcal{N}|_{X_i})$
 whose base changes to morphisms from
@@ -3922,7 +3922,7 @@ Suppose we have objects $(X_i \to S_i, \mathcal{L}_i)$
 of $\Polarizedstack$ lying over $(X_i \to S_i)$
 and a descent datum
 $$
-(\text{id}, \text{id}, \varphi_{ij}) :
+(\id, \text{id}, \varphi_{ij}) :
 (X_{ij} \to S_{ij}, \mathcal{L}_i|_{X_{ij}})
 \to
 (X_{ij} \to S_{ij}, \mathcal{L}_j|_{X_{ij}})
