--- a/resolve.tex
+++ b/resolve.tex
@@ -4754,7 +4754,7 @@ such that $c$ is the blowing up of $v$.
 Then we can glue $V'$ and $X \setminus E$ along
 $f^{-1}(U) \setminus E = V' \setminus \{v\}$
 to get a scheme $X'$ over $S$. The morphisms $c$ and
-$\text{id}_{X \setminus E}$ glue to a morphism $b : X \to X'$
+$\id_{X \setminus E}$ glue to a morphism $b : X \to X'$
 which is the contraction of $E$. The inverse image of $U$ in $X'$
 is proper over $U$. On the other hand, the restriction of $X' \to S$
 to the complement of the image of $v$ in $S$ is isomorphic to the
