--- a/schemes.tex
+++ b/schemes.tex
@@ -2367,7 +2367,7 @@ $$
 $$
 be an isomorphism of locally ringed spaces.
 For convenience we assume that $U_{ii} = X_i$ and
-$\varphi_{ii} = \text{id}_{X_i}$.
+$\varphi_{ii} = \id_{X_i}$.
 For each triple $i, j, k \in I$ assume that
 \begin{enumerate}
 \item we have
@@ -2439,7 +2439,7 @@ a glueing data also $x \in U_{ij} \cap U_{ik}$ and
 $x'' \in U_{ki} \cap U_{kj}$ and by condition (2)
 we see that $\varphi_{ik}(x) = x''$. (Reflexivity and symmetry
 follows from our assumptions that $U_{ii} = X_i$ and
-$\varphi_{ii} = \text{id}_{X_i}$.)
+$\varphi_{ii} = \id_{X_i}$.)
 Denote $\varphi_i : X_i \to X$
 the natural maps. Denote $U_i = \varphi_i(X_i) \subset X$.
 Note that $\varphi_i : X_i \to U_i$ is a bijection.
@@ -2652,7 +2652,7 @@ $$
 \Mor_{\text{Fun}(\Sch^{opp}, \textit{Sets})} (h_Y, F)
 \longrightarrow
 F(Y), \quad
-s \longmapsto s(\text{id}_Y).
+s \longmapsto s(\id_Y).
 $$
 Here is the reverse construction. Given any $\xi \in F(Y)$
 the transformation of functors $s_\xi : h_Y \to F$
@@ -2688,7 +2688,7 @@ $$
 This does indeed
 give an isomorphism $h_{\Spec(\mathbf{Z}[x])} \to F$.
 What is the ``universal family'' $\xi$? To get it we have to
-apply the identifications above to $\text{id}_{\Spec(\mathbf{Z}[x])}$.
+apply the identifications above to $\id_{\Spec(\mathbf{Z}[x])}$.
 Clearly under the identifications above this gives
 that
 $\xi = x \in \Gamma(\Spec(\mathbf{Z}[x]),
@@ -2764,7 +2764,7 @@ this implies that $\varphi_{ij}$ factors through $U_{ji}$.
 Since $(\varphi_{ij} \circ \varphi_{ji})^*\xi_j
 =\varphi_{ji}^*(\varphi_{ij}^*\xi_j) =
 \varphi_{ji}^*\xi_i = \xi_j$ we conclude that
-$\varphi_{ij} \circ \varphi_{ji} = \text{id}_{U_{ji}}$
+$\varphi_{ij} \circ \varphi_{ji} = \id_{U_{ji}}$
 because the pair $(X_j, \xi_j)$ represents $F_j$.
 In particular the maps $\varphi_{ij} : U_{ij} \to U_{ji}$
 are isomorphisms of schemes.
@@ -3273,7 +3273,7 @@ is the scheme $X_{S'} = S' \times_S X$ over $S'$.
 \item Let $f : X \to Y$ be a morphism of schemes over $S$. Let $S' \to S$
 be a morphism of schemes. The {\it base change} of $f$ is
 the induced morphism $f' : X_{S'} \to Y_{S'}$ (namely the
-morphism $\text{id}_{S'} \times_{\text{id}_S} f$).
+morphism $\id_{S'} \times_{\text{id}_S} f$).
 \item Let $R$ be a ring. Let $X$ be a scheme over $R$.
 Let $R \to R'$ be a ring map. The {\it base change} $X_{R'}$
 is the scheme $\Spec(R') \times_{\Spec(R)} X$
@@ -3833,8 +3833,8 @@ $$
 \Delta_{X/S} : X \longrightarrow X \times_S X.
 $$
 This is the unique morphism of schemes such that
-$\text{pr}_1 \circ \Delta_{X/S} = \text{id}_X$ and
-$\text{pr}_2 \circ \Delta_{X/S} = \text{id}_X$ (it exists in
+$\text{pr}_1 \circ \Delta_{X/S} = \id_X$ and
+$\text{pr}_2 \circ \Delta_{X/S} = \id_X$ (it exists in
 any category with fibre products).
 
 \begin{lemma}
@@ -4103,7 +4103,7 @@ applied to the morphism $X = X \times_Y Y \to X \times_S Y$.
 \begin{lemma}
 \label{lemma-section-immersion}
 Let $f : X \to S$ be a morphism of schemes.
-Let $s : S \to X$ be a section of $f$ (in a formula $f \circ s = \text{id}_S$).
+Let $s : S \to X$ be a section of $f$ (in a formula $f \circ s = \id_S$).
 Then $s$ is an immersion.
 If $f$ is separated then $s$ is a closed immersion.
 If $f$ is quasi-separated, then $s$ is quasi-compact.
