--- a/spaces-cohomology.tex
+++ b/spaces-cohomology.tex
@@ -355,7 +355,7 @@ f^*(\mathcal{G} \otimes_\mathcal{B} f_*\mathcal{F})
 \longrightarrow
 f^*\mathcal{G} \otimes_\mathcal{A} \mathcal{F}
 $$
-coming from $\text{id} : f^*\mathcal{G} \to f^*\mathcal{G}$
+coming from $\id : f^*\mathcal{G} \to f^*\mathcal{G}$
 and the adjunction map $f^* f_*\mathcal{F} \to \mathcal{F}$.
 To see this map is an isomorphism, we may check on stalks
 (Properties of Spaces, Theorem
@@ -2198,7 +2198,7 @@ whose cokernel is supported on a proper closed subspace of $Z$.
 By assumption there exists a coherent $\mathcal{O}_Z$-module
 $\mathcal{G}$ with support $Z$ and $\mathcal{F} \cong i_*\mathcal{G}$, see
 Lemma \ref{lemma-coherent-support-closed}. Hence it suffices to prove the
-lemma for the case $Z = X$ and $i = \text{id}$.
+lemma for the case $Z = X$ and $i = \id$.
 
 \medskip\noindent
 By Properties of Spaces, Proposition
