--- a/spaces-duality.tex
+++ b/spaces-duality.tex
@@ -183,7 +183,7 @@ D_{\textit{Coh}}(\mathcal{O}_X)
 D_{\textit{Coh}}(\mathcal{O}_X)
 $$
 which comes equipped with a canonical isomorphism
-$\text{id} \to D \circ D$. If $X$ is quasi-compact, then
+$\id \to D \circ D$. If $X$ is quasi-compact, then
 $D$ exchanges $D^+_{\textit{Coh}}(\mathcal{O}_X)$ and
 $D^-_{\textit{Coh}}(\mathcal{O}_X)$ and induces an equivalence
 $D^b_{\textit{Coh}}(\mathcal{O}_X) \to D^b_{\textit{Coh}}(\mathcal{O}_X)$.
@@ -533,8 +533,8 @@ L(g')^* \circ a \to
 L(g')^* \circ a \circ Rg_* \circ Lg^* \leftarrow
 L(g')^* \circ Rg'_* \circ a' \circ Lg^* \to a' \circ Lg^*
 \end{equation}
-The first arrow comes from the adjunction map $\text{id} \to Rg_* Lg^*$
-and the last arrow from the adjunction map $L(g')^*Rg'_* \to \text{id}$.
+The first arrow comes from the adjunction map $\id \to Rg_* Lg^*$
+and the last arrow from the adjunction map $L(g')^*Rg'_* \to \id$.
 We need the assumption on Tor independence to invert the arrow
 in the middle, see Lemma \ref{lemma-flat-precompose-pus}.
 Alternatively, we can think of (\ref{equation-base-change-map}) by
@@ -864,8 +864,8 @@ $$
 \gamma_{B + D} = \gamma_D \circ \gamma_B
 $$
 Here it would be more correct to write
-$\gamma_{A + B} = (\gamma_A \star \text{id}_{l^*}) \circ
-(\text{id}_{(k')^*} \star \gamma_B)$ with notation as in
+$\gamma_{A + B} = (\gamma_A \star \id_{l^*}) \circ
+(\id_{(k')^*} \star \gamma_B)$ with notation as in
 Categories, Section \ref{categories-section-formal-cat-cat}
 and similarly for the others. However, we continue the
 abuse of notation used in the proofs of
@@ -1131,7 +1131,7 @@ be the right adjoint as in Lemma \ref{lemma-twisted-inverse-image}. By
 Categories, Section \ref{categories-section-adjoint} we obtain a
 transformation of functors
 $$
-\text{Tr}_f : Rf_* \circ a \longrightarrow \text{id}
+\text{Tr}_f : Rf_* \circ a \longrightarrow \id
 $$
 The corresponding map $\text{Tr}_{f, K} : Rf_*a(K) \longrightarrow K$
 for $K \in D_\QCoh(\mathcal{O}_Y)$ is sometimes called the {\it trace map}.
@@ -1224,7 +1224,7 @@ $$
 g^* \circ f_* \circ g'_* \circ a' \ar[d]_{\beta^\vee} \ar[r]_-\beta &
 f'_* \circ (g')^* \circ g'_* \circ a' \ar[d] \\
 g^* \circ f_* \circ a \circ g_* \ar[r] &
-\text{id}
+\id
 }
 $$
 commutes which implies the pentagon in the big diagram commutes.
@@ -1243,7 +1243,7 @@ Lemma \ref{lemma-twisted-inverse-image}. By
 Categories, Section \ref{categories-section-adjoint} we obtain a
 transformation of functors
 $$
-\eta_f : \text{id} \to  a \circ Rf_*
+\eta_f : \id \to  a \circ Rf_*
 $$
 which is called the unit of the adjunction.
 
@@ -1315,7 +1315,7 @@ Categories, Lemma
 the square
 $$
 \xymatrix{
-\text{id} \ar[r] \ar[d] &
+\id \ar[r] \ar[d] &
 g'_* \circ a' \circ g^* \circ f_* \ar[d]^\beta \\
 g'_* \circ a' \circ g^* \circ f_* \ar[r]^{\beta^\vee} &
 a \circ g_* \circ f'_* \circ (g')^*
@@ -1438,7 +1438,7 @@ applied to Cohomology on Sites, Equation
 (\ref{sites-cohomology-equation-projection-formula-map}) which is an
 isomorphism by Derived Categories of Spaces, Lemma
 \ref{spaces-perfect-lemma-cohomology-base-change}, the third arrow is
-$a$ applied to $\text{id}_K \otimes \text{Tr}_f$, and the fourth
+$a$ applied to $\id_K \otimes \text{Tr}_f$, and the fourth
 arrow is $a$ applied to the isomorphism $K \otimes \mathcal{O}_Y = K$.
 The proof of the lemma consists in showing that each of these
 maps gives rise to a commutative square as in the statement of the lemma.
@@ -1676,7 +1676,7 @@ Taking $E = \mathcal{O}_X$ in the above we get a map
 $\alpha : \mathcal{O}_X \to
 R\SheafHom_{\mathcal{O}_X}(a(\mathcal{O}_Y), a(\mathcal{O}_Y))$
 corresponding to
-$\text{id}_{\mathcal{O}_X} \in \Hom_X(\mathcal{O}_X, \mathcal{O}_X)$.
+$\id_{\mathcal{O}_X} \in \Hom_X(\mathcal{O}_X, \mathcal{O}_X)$.
 Since all the isomorphisms above are functorial in $E$ we
 see that the cone on $\alpha$ is an object $C$ of $D_\QCoh(\mathcal{O}_X)$
 such that $\Hom(E, C) = 0$ for all perfect $E$.
