--- a/spaces-limits.tex
+++ b/spaces-limits.tex
@@ -3883,12 +3883,12 @@ y : T \times_{f \circ v, W} V \longrightarrow V
 $$
 is a morphism over $V$. Consider the morphism
 $$
-T \times_{f \circ v, W} V \xrightarrow{(v, \text{id}_V)}
+T \times_{f \circ v, W} V \xrightarrow{(v, \id_V)}
 V \times_W V = V \amalg U
 $$
 The inverse image of $V$ is $T$ embedded via
-$(\text{id}_T, v) : T \to T \times_{f \circ v, W} V$.
-The composition $y' = y \circ (\text{id}_T, v) : T \to Y$
+$(\id_T, v) : T \to T \times_{f \circ v, W} V$.
+The composition $y' = y \circ (\id_T, v) : T \to Y$
 is a morphism with $v = h \circ y'$ which determines $y$ because the
 restriction of $y$ to the other part is uniquely determined as
 $U$ maps into $V^0$ by the second projection. It follows that
@@ -4617,7 +4617,7 @@ to a diagram of the form (\ref{equation-good-diagram}).
 For example, given $X \to B$ finite type and quasi-separated
 if we choose two different diagrams $X \to V_1 \to B_{i_1}$
 and $X \to V_2 \to B_{i_2}$ as in (\ref{equation-good-diagram}), then
-applying Lemma \ref{lemma-morphism-good-diagram} to $\text{id}_X$
+applying Lemma \ref{lemma-morphism-good-diagram} to $\id_X$
 (in two directions)
 we see that the corresponding limit descriptions of
 $X$ are canonically isomorphic (up to shrinking the
