--- a/spaces-more-cohomology.tex
+++ b/spaces-more-cohomology.tex
@@ -481,7 +481,7 @@ In Topologies on Spaces, Lemma
 we have introduced comparison morphisms
 $\pi_X : (\textit{Spaces}/X)_\etale \to X_{spaces, \etale}$ and
 $i_X : \Sh(X_\etale) \to \Sh((\textit{Spaces}/X)_\etale)$
-with $\pi_X \circ i_X = \text{id}$ as morphisms of topoi and
+with $\pi_X \circ i_X = \id$ as morphisms of topoi and
 $\pi_{X, *} = i_X^{-1}$.
 More generally, if $f : Y \to X$ is an object of $(\textit{Spaces}/X)_\etale$,
 then there is a morphism
@@ -1228,7 +1228,7 @@ $(f_{small}^{-1}\mathcal{F}, a_Y^{-1}\mathcal{F}, can)$ is an equivalence.
 \end{lemma}
 
 \begin{proof}
-The functor $a_X^{-1}$ is fully faithful (as $a_{X, *}a_X^{-1} = \text{id}$ by
+The functor $a_X^{-1}$ is fully faithful (as $a_{X, *}a_X^{-1} = \id$ by
 Lemma \ref{lemma-comparison-fppf-etale}). Hence the forgetful functor
 $(\mathcal{G}, \mathcal{H}, \alpha) \mapsto \mathcal{H}$ identifies the
 category of triples with a full subcategory of $\Sh((\Sch/Y)_{fppf})$.
