--- a/spaces-more-morphisms.tex
+++ b/spaces-more-morphisms.tex
@@ -918,15 +918,15 @@ c' :
 \Omega_{X_\etale/Y_\etale}|_{X_{Zar}}
 $$
 Consider the morphism of ringed sites
-$\text{id}_{small, \etale, Zar} : X_\etale \to X_{Zar}$
+$\id_{small, \etale, Zar} : X_\etale \to X_{Zar}$
 discussed in
 Descent, Remark \ref{descent-remark-change-topologies-ringed} and
 Lemma \ref{descent-lemma-compare-sites}.
 Since the restriction functor $\mathcal{F} \mapsto \mathcal{F}|_{X_{Zar}}$
-is equal to $\text{id}_{small, \etale, Zar, *}$, since
-$\text{id}_{small, \etale, Zar}^*$ is left adjoint to
-$\text{id}_{small, \etale, Zar, *}$ and since
-$(\Omega_{X/Y})^a = \text{id}_{small, \etale, Zar}^*\Omega_{X/Y}$
+is equal to $\id_{small, \etale, Zar, *}$, since
+$\id_{small, \etale, Zar}^*$ is left adjoint to
+$\id_{small, \etale, Zar, *}$ and since
+$(\Omega_{X/Y})^a = \id_{small, \etale, Zar}^*\Omega_{X/Y}$
 we see that $c'$ is adjoint to a map
 $$
 c'' :
@@ -5945,7 +5945,7 @@ $$
 where $U$ and $V$ are schemes and the vertical arrows are \'etale
 such that there is a point $u \in U$ mapping to $x$. Let $v \in V$
 be the image of $u$. Applying Lemma \ref{lemma-flat-on-fibres-at-point}
-to $\text{id} : X \to X$ over $Y$ we see that (1) translates into
+to $\id : X \to X$ over $Y$ we see that (1) translates into
 the condition ``$\mathcal{F}|_{U_v}$ is flat over $U_v$ at $u$''.
 In other words, (1) is equivalent to $(\mathcal{F}|_{U_v})_u$
 being a flat $\mathcal{O}_{U_v, u}$-module.
@@ -5990,7 +5990,7 @@ $(\mathcal{F}'_{\overline{y}'})_{\overline{x}'}$ is a flat
 $\mathcal{O}_{X'_{\overline{y}'}, \overline{x}'}$-module
 (with obvious notation). These two assertions are equivalent
 by Lemma \ref{lemma-flat-on-fibres-at-point} applied to
-the morphism $\text{id} : X \to X$ over $Y$.
+the morphism $\id : X \to X$ over $Y$.
 Thus the statement on base change holds.
 \end{proof}
 
@@ -8952,7 +8952,7 @@ As $U \subset B'$ is dense $X' = B'$.
 Let $S$ be a scheme. Let $Y$ be an algebraic space over $S$.
 Let $U \subset W \subset Y$ be open subspaces.
 Let $f : X \to W$ be a morphism and let $s : U \to X$ be a
-morphism such that $f \circ s = \text{id}_U$. Assume
+morphism such that $f \circ s = \id_U$. Assume
 \begin{enumerate}
 \item $f$ is proper,
 \item $Y$ is quasi-compact and quasi-separated, and
@@ -10379,7 +10379,7 @@ on the target) that the left vertical arrow has $\mathcal{P}$.
 
 \medskip\noindent
 If $X$ and $Y$ are representable, then we can take
-$\text{id}_Y : Y \to Y$ as our \'etale covering to see the
+$\id_Y : Y \to Y$ as our \'etale covering to see the
 final statement of the lemma is true.
 \end{proof}
 
@@ -11948,13 +11948,13 @@ $j : U \to \mathbf{P}^n_A$ the immersion we get by composing
 with the open immersion $\mathbf{A}^n_A \to \mathbf{P}^n_A$.
 Let $Z$ be the scheme theoretic closure of
 $$
-(\text{id}_U, j) : U \longrightarrow X \times_A \mathbf{P}^n_A
+(\id_U, j) : U \longrightarrow X \times_A \mathbf{P}^n_A
 $$
 Let $z \in Z$ be the image of $u$.
 Let $Y \subset \mathbf{P}^n_A$ be the scheme theoretic
 closure of $j$. Then it is clear that $Z \subset X \times_A Y$
 is the scheme theoretic closure of
-$(\text{id}_U, j) : U \to X \times_A Y$.
+$(\id_U, j) : U \to X \times_A Y$.
 As $X$ is separated, the morphism
 $X \times_A Y \to Y$ is separated as well.
 Hence we see that $Z \to Y$ is an isomorphism over
@@ -11962,7 +11962,7 @@ the open subscheme $j(U) \subset Y$ by
 Morphisms of Spaces, Lemma
 \ref{spaces-morphisms-lemma-scheme-theoretic-image-of-partial-section}.
 Choose $V \subset \mathbf{P}^n_A$ open with $V \cap Y = j(U)$.
-Then we see that (2) holds, that $W = (\text{id}_U, j)(U)$, and hence
+Then we see that (2) holds, that $W = (\id_U, j)(U)$, and hence
 that (3) holds. Part (1) holds because $A$ is Noetherian.
 
 \medskip\noindent
