--- a/spaces-morphisms.tex
+++ b/spaces-morphisms.tex
@@ -346,7 +346,7 @@ applied to the morphism $X = X \times_Y Y \to X \times_T Y$.
 Let $S$ be a scheme.
 Let $f : X \to T$ be a morphism of algebraic spaces over $S$.
 Let $s : T \to X$ be a section of $f$ (in a formula
-$f \circ s = \text{id}_T$). Then
+$f \circ s = \id_T$). Then
 \begin{enumerate}
 \item $s$ is representable, locally of finite type, locally quasi-finite,
 separated and a monomorphism,
@@ -2426,7 +2426,7 @@ f^*(\mathcal{F} \otimes_\mathcal{A} f_*\mathcal{G})
 \longrightarrow
 f^*\mathcal{F} \otimes_\mathcal{B} \mathcal{G}
 $$
-coming from $\text{id} : f^*\mathcal{F} \to f^*\mathcal{F}$
+coming from $\id : f^*\mathcal{F} \to f^*\mathcal{F}$
 and the adjunction map $f^* f_*\mathcal{G} \to \mathcal{G}$.
 To see this map is an isomorphism, we may check on stalks
 (Properties of Spaces, Theorem
@@ -3143,7 +3143,7 @@ This proves the lemma.
 Let $S$ be a scheme.
 Let $f : X \to Y$ be a separated morphism of algebraic spaces over $S$.
 Let $V \subset Y$ be an open subspace such that $V \to Y$ is quasi-compact.
-Let $s : V \to X$ be a morphism such that $f \circ s = \text{id}_V$.
+Let $s : V \to X$ be a morphism such that $f \circ s = \id_V$.
 Let $Y'$ be the scheme theoretic image of $s$.
 Then $Y' \to Y$ is an isomorphism over $V$.
 \end{lemma}
