--- a/spaces-perfect.tex
+++ b/spaces-perfect.tex
@@ -106,7 +106,7 @@ Consider the morphism of ringed sites
 \longrightarrow
 (X_{Zar}, \mathcal{O}_X).
 \end{equation}
-denoted $\text{id}_{small, \etale, Zar}$ in
+denoted $\id_{small, \etale, Zar}$ in
 Descent, Lemma \ref{descent-lemma-compare-sites}.
 
 \begin{lemma}
@@ -186,7 +186,7 @@ We will prove this by showing the functor
 $R\epsilon_* : D(\mathcal{O}_\etale) \to D(\mathcal{O}_X)$
 induces a quasi-inverse. We will use freely that $\epsilon_*$
 is given by restriction to $X_{Zar} \subset X_\etale$ and the description of
-$\epsilon^* = \text{id}_{small, \etale, Zar}^*$
+$\epsilon^* = \id_{small, \etale, Zar}^*$
 in Descent, Lemma \ref{descent-lemma-compare-sites}.
 
 \medskip\noindent
@@ -2380,7 +2380,7 @@ which implies $a = 0$ as desired.
 
 \medskip\noindent
 Since $i_X$ is fully faithful with right adjoint $RQ_X$ we see that
-$RQ_X \circ i_X = \text{id}$ (Categories, Lemma
+$RQ_X \circ i_X = \id$ (Categories, Lemma
 \ref{categories-lemma-adjoint-fully-faithful}).
 To finish the proof we show that for any
 $E$ in $D_\QCoh(\mathcal{O}_X)$ the map
@@ -2418,7 +2418,7 @@ $$
 where the middle morphism is the adjunction map. However, the composition
 $E \to E'$ is zero, hence $E \to i_X(RQ_X(E'))$ is zero by adjunction!
 Since this morphism is isomorphic to the morphism
-$E \to Rj_*(E|_V)$ adjoint to $\text{id} : E|_V \to E|_V$ we
+$E \to Rj_*(E|_V)$ adjoint to $\id : E|_V \to E|_V$ we
 conclude that $E|_V$ is zero. Since this holds for all
 affine $V$ \'etale over $X$ we conclude $E$ is zero as desired.
 \end{proof}
