--- a/spaces-properties.tex
+++ b/spaces-properties.tex
@@ -4539,7 +4539,7 @@ The morphism $(f_{spaces, \etale, c}, f_c^\sharp)$ is defined as a
 composition $f' \circ j$
 of a localization and a base change map. Similarly $g$ is a composition
 $U \to V \times_Y X \to V$. Hence it suffices to prove
-the lemma in the following two cases: (1) $f = \text{id}$, and
+the lemma in the following two cases: (1) $f = \id$, and
 (2) $U = X \times_Y V$. In case (1) the morphism $g : U \to V$ is
 \'etale, see
 Lemma \ref{lemma-etale-permanence}.
@@ -4685,7 +4685,7 @@ Let $f : X \to Y$ be a morphism of algebraic spaces over $S$.
 Let $t$ be a $2$-morphism from $(f_{small}, f^\sharp)$ to itself, see
 Modules on Sites,
 Definition \ref{sites-modules-definition-2-morphism-ringed-topoi}.
-Then $t = \text{id}$.
+Then $t = \id$.
 \end{lemma}
 
 \begin{proof}
@@ -4752,7 +4752,7 @@ $$
 f_{small}^{-1}h_V \ar[r]^-{f^{-1}h_i} \ar[d]^t &
 \prod_{j \in J} f_{small}^{-1}\mathcal{O}_Y
 \ar[r]^-{\prod f^\sharp} \ar[d]^{\prod t} &
-\prod_{j \in J} \mathcal{O}_X \ar[d]^{\text{id}}\\
+\prod_{j \in J} \mathcal{O}_X \ar[d]^{\id}\\
 f_{small}^{-1}h_V \ar[r]^-{f^{-1}h_i} &
 \prod_{j \in J} f_{small}^{-1}\mathcal{O}_Y
 \ar[r]^-{\prod f^\sharp} &
@@ -5264,7 +5264,7 @@ restriction $\varphi^*\mathcal{F}$ is a quasi-coherent $\mathcal{O}_U$-module.
 \end{lemma}
 
 \begin{proof}
-It is clear that (1) implies (2) by considering $\text{id}_X$.
+It is clear that (1) implies (2) by considering $\id_X$.
 Assume $f : Y \to X$ is as in (2), and let $V \to Y$ be a surjective
 \'etale morphism from a scheme towards $Y$. Then the composition $V \to X$ is
 surjective \'etale as well
