--- a/spaces-topologies.tex
+++ b/spaces-topologies.tex
@@ -341,8 +341,8 @@ i_X :
 \longrightarrow
 \Sh((\textit{Spaces}/X)_\etale)
 $$
-such that $\pi_X \circ i_X = \text{id}$. Moreover, $i_X = i_{\text{id}_X}$
-with $i_{\text{id}_X}$ as in Lemma \ref{lemma-put-in-T-etale}.
+such that $\pi_X \circ i_X = \id$. Moreover, $i_X = i_{\text{id}_X}$
+with $i_{\id_X}$ as in Lemma \ref{lemma-put-in-T-etale}.
 In particular the functor $i_X^{-1} = \pi_{X, *}$ is described by the rule
 $i_X^{-1}(\mathcal{G})(U/X) = \mathcal{G}(U/X)$.
 \end{lemma}
@@ -574,7 +574,7 @@ We have $(i_f^{-1}\mathcal{O})(U/Y) = \mathcal{O}_U(U) = \mathcal{O}_Y(U)$
 by construction.
 Hence an isomorphism $i_f^\sharp : i_f^{-1}\mathcal{O} \to \mathcal{O}_Y$.
 \item In Lemma \ref{lemma-at-the-bottom-etale} it was noted
-that $i_X$ is a special case of $i_f$ with $f = \text{id}_X$
+that $i_X$ is a special case of $i_f$ with $f = \id_X$
 hence we are back in case (1).
 \item In Lemma \ref{lemma-at-the-bottom-etale} the morphism
 $\pi_X$ satisfies $(\pi_{X, *}\mathcal{O})(U) = \mathcal{O}(U) =
