--- a/stacks-cohomology.tex
+++ b/stacks-cohomology.tex
@@ -1214,7 +1214,7 @@ We have
 where the first equality is
 Sheaves on Stacks, Lemma \ref{stacks-sheaves-lemma-map-from-quasi-coherent}
 and the second equality holds because $q_1$ and $q_2$ are inverse
-equivalences of categories. The assertion $Q \circ i \cong \text{id}$
+equivalences of categories. The assertion $Q \circ i \cong \id$
 is a formal consequence of the fact that $i$ is fully faithful.
 \end{proof}
 
@@ -1720,10 +1720,10 @@ g :
 $$
 with $g^{-1}$ given by restriction,
 \item the functor $g^{-1}$ has a left adjoint $g_!^{Sh}$ on sheaves of sets,
-\item the adjunction maps $g^{-1}g_* \to \text{id}$ and
-$\text{id} \to g^{-1}g_!^{Sh}$ are isomorphisms,
+\item the adjunction maps $g^{-1}g_* \to \id$ and
+$\id \to g^{-1}g_!^{Sh}$ are isomorphisms,
 \item the functor $g^{-1}$ has a left adjoint $g_!$ on abelian sheaves,
-\item the adjunction map $\text{id} \to g^{-1}g_!$ is an isomorphism, and
+\item the adjunction map $\id \to g^{-1}g_!$ is an isomorphism, and
 \item we have $g^{-1}\mathcal{O}_\mathcal{X} =
 \mathcal{O}_{\mathcal{X}_{lisse,\etale}}$ hence $g$ induces a flat
 morphism of ringed topoi such that $g^{-1} = g^*$.
@@ -1741,10 +1741,10 @@ g :
 $$
 with $g^{-1}$ given by restriction,
 \item the functor $g^{-1}$ has a left adjoint $g_!^{Sh}$ on sheaves of sets,
-\item the adjunction maps $g^{-1}g_* \to \text{id}$ and
-$\text{id} \to g^{-1}g_!^{Sh}$ are isomorphisms,
+\item the adjunction maps $g^{-1}g_* \to \id$ and
+$\id \to g^{-1}g_!^{Sh}$ are isomorphisms,
 \item the functor $g^{-1}$ has a left adjoint $g_!$ on abelian sheaves,
-\item the adjunction map $\text{id} \to g^{-1}g_!$ is an isomorphism, and
+\item the adjunction map $\id \to g^{-1}g_!$ is an isomorphism, and
 \item we have $g^{-1}\mathcal{O}_\mathcal{X} =
 \mathcal{O}_{\mathcal{X}_{flat,fppf}}$ hence $g$ induces a flat
 morphism of ringed topoi such that $g^{-1} = g^*$.
@@ -1780,7 +1780,7 @@ g_! :
 \textit{Mod}(\mathcal{X}_\etale, \mathcal{O}_{\mathcal{X}})
 $$
 which is left adjoint to $g^*$. Moreover it agrees with the functor $g_!$
-on abelian sheaves and $g^*g_! = \text{id}$.
+on abelian sheaves and $g^*g_! = \id$.
 \item There exists a functor
 $$
 g_! :
@@ -1790,7 +1790,7 @@ g_! :
 \textit{Mod}(\mathcal{X}_{fppf}, \mathcal{O}_{\mathcal{X}})
 $$
 which is left adjoint to $g^*$. Moreover it agrees with the functor $g_!$
-on abelian sheaves and $g^*g_! = \text{id}$.
+on abelian sheaves and $g^*g_! = \id$.
 \end{enumerate}
 \end{lemma}
 
@@ -1837,7 +1837,7 @@ the composition $U' \to U \to \mathcal{X}$ is flat. Thus
 applies.
 
 \medskip\noindent
-In both cases the equality $g^*g_! = \text{id}$ follows from
+In both cases the equality $g^*g_! = \id$ follows from
 $g^* = g^{-1}$ and the
 equality for abelian sheaves in Lemma \ref{lemma-lisse-etale}.
 \end{proof}
@@ -1931,7 +1931,7 @@ $\mathcal{O}(V)$. By the commutative diagram
 $$
 \xymatrix{
 V \ar[rr]_-{(\varphi, 0)} \ar[rrd]_\varphi & & U \times \mathbf{A}^1 \\
-& & U \ar[u]_{(\text{id}, 0)}
+& & U \ar[u]_{(\id, 0)}
 }
 $$
 we see that
