--- a/stacks-introduction.tex
+++ b/stacks-introduction.tex
@@ -275,7 +275,7 @@ Suppose given a scheme $S$ and an \'etale covering $\{S_i \to S\}$
 and morphisms $e_i : S_i \to \mathcal{M}_{1, 1}$ such that the diagrams
 $$
 \xymatrix{
-S_i \times_S S_j \ar[rd]_{e_i \circ \text{pr}_1} \ar[rr]_{\text{id}} & &
+S_i \times_S S_j \ar[rd]_{e_i \circ \text{pr}_1} \ar[rr]_{\id} & &
 S_i \times_S S_j \ar[ld]^{e_j \circ \text{pr}_2} \\
 & \mathcal{M}_{1, 1}
 }
