--- a/stacks-limits.tex
+++ b/stacks-limits.tex
@@ -210,7 +210,7 @@ $$
 is an algebraic space over $U_i$ and the same is true for the
 analogously defined functor $X_{y'_i}$. Since (2) is equivalent to (3)
 we see that $X_{y'_i}$ is locally of finite presentation over $U_i$.
-Observe that $(x_i, \text{id})$ and $(x'_i, \text{id})$ define
+Observe that $(x_i, \id)$ and $(x'_i, \text{id})$ define
 $U_i$-valued points of $X_{y_i}$ and $X_{y'_i}$.
 There is a transformation of functors
 $$
@@ -221,20 +221,20 @@ in other words, this is a morphism of algebraic spaces over $U_i$.
 We claim that
 $$
 \xymatrix{
-U \ar[d] \ar[rr] & & U_i \ar[d]^{(x'_i, \text{id})} \\
-U_i \ar[r]^{(x_i, \text{id})} & X_{y_i} \ar[r]^{\beta_i} & X_{y'_i}
+U \ar[d] \ar[rr] & & U_i \ar[d]^{(x'_i, \id)} \\
+U_i \ar[r]^{(x_i, \id)} & X_{y_i} \ar[r]^{\beta_i} & X_{y'_i}
 }
 $$
 commutes. Namely, this is equivalent to the condition that
-the pairs $(x_i|_U, \beta_i|_U)$ and $(x'_i|_U, \text{id})$
+the pairs $(x_i|_U, \beta_i|_U)$ and $(x'_i|_U, \id)$
 as in the definition of the functor $X_{y'_i}$ are isomorphic.
 And the morphism $\alpha : x_i|_U \to x'_i|_U$ exactly produces
 such an isomorphism. Arguing backwards the reader sees that
 if we can find an $i' \geq i$ such that the diagram
 $$
 \xymatrix{
-U_{i'} \ar[d] \ar[rr] & & U_i \ar[d]^{(x'_i, \text{id})} \\
-U_i \ar[r]^{(x_i, \text{id})} & X_{y_i} \ar[r]^{\beta_i} & X_{y'_i}
+U_{i'} \ar[d] \ar[rr] & & U_i \ar[d]^{(x'_i, \id)} \\
+U_i \ar[r]^{(x_i, \id)} & X_{y_i} \ar[r]^{\beta_i} & X_{y'_i}
 }
 $$
 commutes, then we obtain an isomorphism $x_i|_{U_{i'}} \to x'_i|_{U_{i'}}$
