--- a/stacks-perfect.tex
+++ b/stacks-perfect.tex
@@ -83,7 +83,7 @@ D(\mathcal{X}_{lisse,\etale})
 \longrightarrow
 D(\mathcal{X}_\etale)
 $$
-which is left adjoint to $g^{-1}$ and such that $g^{-1}Lg_! = \text{id}$.
+which is left adjoint to $g^{-1}$ and such that $g^{-1}Lg_! = \id$.
 \item The functor $g_! : 
 \textit{Mod}(\mathcal{X}_{lisse,\etale},
 \mathcal{O}_{\mathcal{X}_{lisse,\etale}}) \to
@@ -95,7 +95,7 @@ D(\mathcal{O}_{\mathcal{X}_{lisse,\etale}})
 \longrightarrow
 D(\mathcal{X}_\etale, \mathcal{O}_\mathcal{X})
 $$
-which is left adjoint to $g^*$ and such that $g^*Lg_! = \text{id}$.
+which is left adjoint to $g^*$ and such that $g^*Lg_! = \id$.
 \item The functor $g_! : \textit{Ab}(\mathcal{X}_{flat,fppf}) \to
 \textit{Ab}(\mathcal{X}_{fppf})$
 has a left derived functor
@@ -105,7 +105,7 @@ D(\mathcal{X}_{flat, fppf})
 \longrightarrow
 D(\mathcal{X}_{fppf})
 $$
-which is left adjoint to $g^{-1}$ and such that $g^{-1}Lg_! = \text{id}$.
+which is left adjoint to $g^{-1}$ and such that $g^{-1}Lg_! = \id$.
 \item The functor $g_! :
 \textit{Mod}(\mathcal{X}_{flat,fppf},
 \mathcal{O}_{\mathcal{X}_{flat,fppf}}) \to
@@ -117,7 +117,7 @@ D(\mathcal{O}_{\mathcal{X}_{flat, fppf}})
 \longrightarrow
 D(\mathcal{O}_\mathcal{X})
 $$
-which is left adjoint to $g^*$ and such that $g^*Lg_! = \text{id}$.
+which is left adjoint to $g^*$ and such that $g^*Lg_! = \id$.
 \end{enumerate}
 Warning: It is not clear (a priori) that $Lg_!$ on modules agrees
 with $Lg_!$ on abelian sheaves, see
@@ -715,7 +715,7 @@ D_\QCoh(\mathcal{O}_\mathcal{X}) \ar[ld]^c \\
 }
 $$
 where $q$ is the quotient functor, the inner triangle is commutative, and
-$g^{-1}Lg_! = \text{id}$.
+$g^{-1}Lg_! = \id$.
 For any object of $E$ of $D_{\mathcal{M}_\mathcal{X}}(\mathcal{O}_\mathcal{X})$
 the map $a : Lg_!g^{-1}E \to E$ maps to a quasi-isomorphism in
 $D(\mathcal{O}_{\mathcal{X}_{flat, fppf}})$. Hence the cone on
