--- a/stacks-properties.tex
+++ b/stacks-properties.tex
@@ -620,7 +620,7 @@ $\text{pr}_R : R' \to R$ is the projection. Thus it makes sense to ask
 if
 \begin{equation}
 \label{equation-verify}
-\tau \star \text{id}_{\text{pr}_R} = \text{id}_g \star \tau'.
+\tau \star \id_{\text{pr}_R} = \text{id}_g \star \tau'.
 \end{equation}
 Now we make two claims: (1) if Equation (\ref{equation-verify}) holds,
 then the diagram $2$-commutes, and (2) Equation (\ref{equation-verify}) holds.
@@ -650,7 +650,7 @@ $(g, \beta), (g', \beta') :
 \to
 (f_2 : \mathcal{X}_2 \to \mathcal{Y})$
 is a $2$-morphism $\alpha : g \to g'$ such that
-$(\text{id}_{f_2} \star \alpha) \circ \beta = \beta'$.
+$(\id_{f_2} \star \alpha) \circ \beta = \beta'$.
 \end{enumerate}
 Let us denote this $2$-category $\textit{Spaces}/\mathcal{Y}$ by
 analogy with the notation of
@@ -2024,7 +2024,7 @@ Then $\mathcal{X}$ is an algebraic space.
 Apply
 Stacks, Lemma \ref{stacks-lemma-stack-in-setoids-descent}
 to the morphism $\coprod_{i \in I} \mathcal{X}_i \to \mathcal{X}$
-and the morphism $\text{id} : \mathcal{X} \to \mathcal{X}$ to
+and the morphism $\id : \mathcal{X} \to \mathcal{X}$ to
 see that $\mathcal{X}$ is a stack in setoids.
 Hence $\mathcal{X}$ is an algebraic space, see
 Algebraic Stacks,
@@ -2083,7 +2083,7 @@ $\mathcal{P}$, and
 stacks representable by algebraic spaces which has $\mathcal{R}$
 then $\mathcal{Z} \times_\mathcal{Y} \mathcal{X}'$ is the largest open
 substack of $\mathcal{Z} \times_\mathcal{Y} \mathcal{X}$ over which
-the base change $\text{id}_\mathcal{Z} \times f$ has property $\mathcal{P}$.
+the base change $\id_\mathcal{Z} \times f$ has property $\mathcal{P}$.
 \end{enumerate}
 \end{lemma}
 
@@ -2283,7 +2283,7 @@ But now $|Z| \subset |U|$ is the inverse image of $|\mathcal{X}'|$, and
 hence $|Z| = |U|$. Hence $Z$ is a closed subscheme of $U$ whose underlying
 sets of points agree. By
 Schemes, Lemma \ref{schemes-lemma-map-into-reduction}
-the map $\text{id}_U : U \to U$ factors through $Z \to U$, and hence
+the map $\id_U : U \to U$ factors through $Z \to U$, and hence
 $Z = U$, i.e., $\mathcal{X}' = \mathcal{X}$.
 \end{proof}
 
