--- a/topologies.tex
+++ b/topologies.tex
@@ -408,8 +408,8 @@ and a morphism of topoi
 $$
 i_S : \Sh(S_{Zar}) \longrightarrow \Sh((\Sch/S)_{Zar})
 $$
-such that $\pi_S \circ i_S = \text{id}$. Moreover, $i_S = i_{\text{id}_S}$
-with $i_{\text{id}_S}$ as in Lemma \ref{lemma-put-in-T}. In particular the
+such that $\pi_S \circ i_S = \id$. Moreover, $i_S = i_{\text{id}_S}$
+with $i_{\id_S}$ as in Lemma \ref{lemma-put-in-T}. In particular the
 functor $i_S^{-1} = \pi_{S, *}$ is described by the rule
 $i_S^{-1}(\mathcal{G})(U/S) = \mathcal{G}(U/S)$.
 \end{lemma}
@@ -1018,8 +1018,8 @@ and a morphism of topoi
 $$
 i_S : \Sh(S_\etale) \longrightarrow \Sh((\Sch/S)_\etale)
 $$
-such that $\pi_S \circ i_S = \text{id}$. Moreover, $i_S = i_{\text{id}_S}$
-with $i_{\text{id}_S}$ as in Lemma \ref{lemma-put-in-T-etale}.
+such that $\pi_S \circ i_S = \id$. Moreover, $i_S = i_{\text{id}_S}$
+with $i_{\id_S}$ as in Lemma \ref{lemma-put-in-T-etale}.
 In particular the functor $i_S^{-1} = \pi_{S, *}$ is described by the rule
 $i_S^{-1}(\mathcal{G})(U/S) = \mathcal{G}(U/S)$.
 \end{lemma}
@@ -3369,7 +3369,7 @@ f : \Sh(\Sch'_\tau) &
 \longrightarrow &
 \Sh(\Sch_\tau)
 \end{eqnarray*}
-such that $f \circ g \cong \text{id}$. For any object $S$
+such that $f \circ g \cong \id$. For any object $S$
 of $\Sch_\tau$ the inclusion functor
 $(\Sch/S)_\tau \to (\Sch'/S)_\tau$ satisfies
 the assumptions of Sites, Lemma \ref{sites-lemma-bigger-site}
@@ -3382,7 +3382,7 @@ f : \Sh((\Sch'/S)_\tau) &
 \longrightarrow &
 \Sh((\Sch/S)_\tau)
 \end{eqnarray*}
-with $f \circ g \cong \text{id}$.
+with $f \circ g \cong \id$.
 \end{lemma}
 
 \begin{proof}
