--- a/topology.tex
+++ b/topology.tex
@@ -145,7 +145,7 @@ Lemma \ref{lemma-Hausdorff}.
 \begin{lemma}
 \label{lemma-section-closed}
 Let $f : X \to Y$ be a continuous map of topological spaces.
-Let $s : Y \to X$ be a continuous map such that $f \circ s = \text{id}_Y$.
+Let $s : Y \to X$ be a continuous map such that $f \circ s = \id_Y$.
 If $X$ is Hausdorff, then $s(Y)$ is closed.
 \end{lemma}
 
@@ -4865,7 +4865,7 @@ is open. Thus $X$ is extremally disconnected.
 \begin{lemma}
 \label{lemma-rainwater}
 Let $f : X \to X$ be a continuous selfmap of a Hausdorff topological space.
-If $f$ is not $\text{id}_X$, then there exists a proper closed subset
+If $f$ is not $\id_X$, then there exists a proper closed subset
 $E \subset X$ such that $X = E \cup f(E)$.
 \end{lemma}
 
@@ -4920,9 +4920,9 @@ Because $X'$ is extremally disconnected there exists a continuous map
 $f : X' \to E$ over $X$
 (Proposition \ref{proposition-projective-in-category-hausdorff-qc}).
 Composing $f$ with the map $E \to X'$ gives a continuous selfmap
-$f|_E : E \to E$. This map has to be $\text{id}_E$ as otherwise
+$f|_E : E \to E$. This map has to be $\id_E$ as otherwise
 Lemma \ref{lemma-rainwater} shows that $E$ isn't minimal.
-Thus the $\text{id}_E$ factors through the extremally disconnected
+Thus the $\id_E$ factors through the extremally disconnected
 space $X'$. A formal, categorical argument (using the characterization of
 Proposition \ref{proposition-projective-in-category-hausdorff-qc})
 shows that $E$ is extremally disconnected.
