--- a/varieties.tex
+++ b/varieties.tex
@@ -6625,7 +6625,7 @@ X^{(p)} = X^{(p/S)} = X \times_{S, F_S} S
 $$
 viewed as a scheme over $S$. Applying
 Lemma \ref{lemma-frobenius-endomorphism-identity}
-we see $F_{X/S} = (F_X, \text{id}_S) : X \longrightarrow X^{(p)}$
+we see $F_{X/S} = (F_X, \id_S) : X \longrightarrow X^{(p)}$
 is a morphism over $S$ fitting into the commutative diagram
 $$
 \xymatrix{
@@ -6808,7 +6808,7 @@ $$
 viewed as a scheme over $S$. Observe that $X \mapsto X^{(p^n)}$
 is a functor. Applying
 Lemma \ref{lemma-frobenius-endomorphism-identity}
-we see $F_{X/S, n} = (F_X^n, \text{id}_S) : X \longrightarrow X^{(p^n)}$
+we see $F_{X/S, n} = (F_X^n, \id_S) : X \longrightarrow X^{(p^n)}$
 is a morphism over $S$ fitting into the commutative diagram
 $$
 \xymatrix{
