--- a/etale.tex
+++ b/etale.tex
@@ -448,7 +448,7 @@ $q : C = (B \otimes_R B)/I^2 \to B = C/J$ defined by the square zero ideal
 $J = I/I^2$ where $I$ is the kernel of the multiplication map
 $B \otimes_R B \to B$. We already have a lifting $B \to C$ defined by, say,
 $b \mapsto b \otimes 1$. Thus, by the same reasoning as above, we obtain a
-bijective correspondence between liftings of $\text{id} : B \to C/J$ and
+bijective correspondence between liftings of $\id : B \to C/J$ and
 $\text{Der}_R(B, J)$. The hypothesis therefore implies that the latter module is
 trivial. But we know that $J \cong \Omega_{B/R}$. Thus, $B/R$ is unramified.
 \end{proof}
