--- a/examples-stacks.tex
+++ b/examples-stacks.tex
@@ -1347,12 +1347,12 @@ $$
 by the following rules: On objects we set
 $$
 F_p(U, x) =
-(U, \pi \circ x, G \times_{B, \pi \circ x} U, a \circ (\text{id}_G \times x))
+(U, \pi \circ x, G \times_{B, \pi \circ x} U, a \circ (\id_G \times x))
 $$
 This makes sense because the diagram
 $$
 \xymatrix{
-G \times_{B, \pi \circ x} U \ar[d] \ar[r]_{\text{id}_G \times x} &
+G \times_{B, \pi \circ x} U \ar[d] \ar[r]_{\id_G \times x} &
 G \times_{B, \pi} X \ar[r]_-a &
 X \ar[d]^\pi \\
 U \ar[rr]^{\pi \circ x} & & B
@@ -1377,14 +1377,14 @@ R_{g^{-1}}(g', u) = (m(g', i(g)), f(u))
 $$
 To see that this works we have to verify that
 $$
-a \circ (\text{id}_G \times x)
+a \circ (\id_G \times x)
 =
-a \circ (\text{id}_G \times x') \circ R_{g^{-1}}
+a \circ (\id_G \times x') \circ R_{g^{-1}}
 $$
 which is true because the right hand side applied to the $T$-valued point
 $(g', u)$ gives the desired equality
 \begin{align*}
-a((\text{id}_G \times x')(m(g', i(g)), f(u)))
+a((\id_G \times x')(m(g', i(g)), f(u)))
 & =
 a(m(g', i(g)), x'(f(u))) \\
 & =
