--- a/morphisms.tex
+++ b/morphisms.tex
@@ -957,7 +957,7 @@ Schemes, Lemma \ref{schemes-lemma-map-into-reduction}.
 \label{lemma-scheme-theoretic-image-of-partial-section}
 Let $f : X \to Y$ be a separated morphism of schemes.
 Let $V \subset Y$ be a retrocompact open. Let $s : V \to X$
-be a morphism such that $f \circ s = \text{id}_V$.
+be a morphism such that $f \circ s = \id_V$.
 Let $Y'$ be the scheme theoretic image of $s$.
 Then $Y' \to Y$ is an isomorphism over $V$.
 \end{lemma}
@@ -1683,7 +1683,7 @@ sheaf $\mathcal{A} = f_*\mathcal{O}_X$ is a quasi-coherent sheaf
 of $\mathcal{O}_X$-algebras. Thus we have the scheme
 $g : Y = \underline{\Spec}_S(\mathcal{A}) \to S$ over $S$.
 The identity map
-$\text{id} : \mathcal{A} = f_*\mathcal{O}_X \to f_*\mathcal{O}_X$
+$\id : \mathcal{A} = f_*\mathcal{O}_X \to f_*\mathcal{O}_X$
 provides, via the definition of the relative spectrum,
 a morphism $can : X \to Y$ over $S$, see
 Constructions, Lemma \ref{constructions-lemma-canonical-morphism}.
@@ -2007,7 +2007,7 @@ sheaf $\mathcal{A} = f_*\mathcal{O}_X$ is a quasi-coherent sheaf
 of $\mathcal{O}_X$-algebras. Thus we have the scheme
 $g : Y = \underline{\Spec}_S(\mathcal{A}) \to S$ over $S$.
 The identity map
-$\text{id} : \mathcal{A} = f_*\mathcal{O}_X \to f_*\mathcal{O}_X$
+$\id : \mathcal{A} = f_*\mathcal{O}_X \to f_*\mathcal{O}_X$
 provides, via the definition of the relative spectrum,
 a morphism $can : X \to Y$ over $S$, see
 Constructions, Lemma \ref{constructions-lemma-canonical-morphism}.
@@ -10483,7 +10483,7 @@ to the surjection
 $$
 f^*f_*\mathcal{O}_X \longrightarrow \mathcal{O}_X
 $$
-coming from the adjunction map $f^*f_* \to \text{id}$. Then $\sigma$
+coming from the adjunction map $f^*f_* \to \id$. Then $\sigma$
 is a closed immersion by
 Schemes, Lemma \ref{schemes-lemma-semi-diagonal} and
 Constructions, Lemma \ref{constructions-lemma-projective-bundle-separated}.
@@ -12571,7 +12571,7 @@ Let $f : Y \to X$ be a quasi-compact and quasi-separated morphism of schemes.
 Let $\mathcal{O}'$ be the integral closure of $\mathcal{O}_X$ in
 $f_*\mathcal{O}_Y$. The {\it normalization of $X$ in $Y$} is the
 scheme\footnote{The scheme $X'$ need not be normal, for example if
-$Y = X$ and $f = \text{id}_X$, then $X' = X$.}
+$Y = X$ and $f = \id_X$, then $X' = X$.}
 $$
 \nu : X' = \underline{\Spec}_X(\mathcal{O}') \to X
 $$
