--- a/spaces.tex
+++ b/spaces.tex
@@ -223,7 +223,7 @@ $F' = h_T \times_{\sigma, G, a} F$ is a representable presheaf
 and hence (see remarks in Section \ref{section-general}) a sheaf.
 Note that $(\varphi_i, s_i) \in F'(T_i)$ satisfy the
 sheaf condition also, and hence come from some unique
-$(\text{id}_T, s) \in F'(T)$. Clearly $s$ is the section of
+$(\id_T, s) \in F'(T)$. Clearly $s$ is the section of
 $F$ we are looking for.
 \end{proof}
 
